--- a/Docker/3、Docker镜像/1、初识镜像.md
+++ b/Docker/3、Docker镜像/1、初识镜像.md
@@ -1,3 +1,25 @@
+
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+* [使用Docker镜像](#使用docker镜像)
+	* [获取镜像](#a-namedocker-image-pull-hrefjavascriptvoid0获取镜像a)
+		* [运行](#运行)
+	* [列出镜像](#列出镜像)
+		* [镜像体积](#镜像体积)
+		* [虚拟镜像](#虚拟镜像)
+		* [中间层镜像](#中间层镜像)
+		* [列出部分镜像](#列出部分镜像)
+		* [以特定格式显示](#以特定格式显示)
+	* [删除本地镜像](#删除本地镜像)
+		* [用 ID、镜像名、摘要删除镜像](#用-id-镜像名-摘要删除镜像)
+		* [Untagged 和 Deleted](#untagged-和-deleted)
+		* [用 docker image ls 命令来配合](#用-docker-image-ls-命令来配合)
+* [利用 commit 理解镜像构成](#利用-commit-理解镜像构成)
+	* [慎用 `docker commit`](#慎用-docker-commit)
+
+<!-- /code_chunk_output -->
 #使用Docker镜像
 在之前的介绍中，我们知道镜像是 Docker 的三大组件之一。
 Docker 运行容器前需要本地存在对应的镜像，如果本地不存在该镜像，Docker会从镜像仓库下载该镜像。
