--- a/Java Framework/Spring Source Code/Container/2、默认标签解析.md
+++ b/Java Framework/Spring Source Code/Container/2、默认标签解析.md
@@ -15,6 +15,8 @@
       - [8 解析子元素 qualifier](#8-解析子元素-qualifier)
     - [2.1.2 AbstractBeanDefinition 属性](#212-abstractbeandefinition-属性)
     - [2.1.3 解析默认标签中的自定义标签元素](#213-解析默认标签中的自定义标签元素)
+    - [2.1.4 注册解析的 BeanDefinition](#214-注册解析的-beandefinition)
+        - [1. 通过 beanaName 注册 beanDefinition](#1-通过-beananame-注册-beandefinition)
 
 <!-- /code_chunk_output -->
 
@@ -1222,6 +1224,7 @@
 		BeanDefinitionHolder finalDefinition = definitionHolder;
 
 		// Decorate based on custom attributes first.
+        // 首先遍历所有的属性，看看是否有适用修饰的属性
 		NamedNodeMap attributes = ele.getAttributes();
 		for (int i = 0; i < attributes.getLength(); i++) {
 			Node node = attributes.item(i);
@@ -1229,6 +1232,7 @@
 		}
 
 		// Decorate based on custom nested elements.
+        // 遍历所有的子节点，看看是否有适用于修饰的子元素
 		NodeList children = ele.getChildNodes();
 		for (int i = 0; i < children.getLength(); i++) {
 			Node node = children.item(i);
@@ -1239,3 +1243,160 @@
 		return finalDefinition;
 	}
  ```
+&emsp;&emsp;上面的代码，我们看到函数分别对元素的所有属性以及子节点进行了 decorateIfRequired 函数的调用，我们继续跟踪代码：
+ ```java
+ public BeanDefinitionHolder decorateIfRequired(
+			Node node, BeanDefinitionHolder originalDef, @Nullable BeanDefinition containingBd) {
+        //获取自定义标签的命名空间
+		String namespaceUri = getNamespaceURI(node);
+        //判断命名空间是非默认的命名空间
+		if (namespaceUri != null && !isDefaultNamespace(namespaceUri)) {
+            //根据命名空间找到对应的处理器
+			NamespaceHandler handler = this.readerContext.getNamespaceHandlerResolver().resolve(namespaceUri);
+			if (handler != null) {
+                //进行修饰
+				BeanDefinitionHolder decorated =
+						handler.decorate(node, originalDef, new ParserContext(this.readerContext, this, containingBd));
+				if (decorated != null) {
+					return decorated;
+				}
+			}
+			else if (namespaceUri.startsWith("http://www.springframework.org/")) {
+				error("Unable to locate Spring NamespaceHandler for XML schema namespace [" + namespaceUri + "]", node);
+			}
+			else {
+				// A custom namespace, not to be handled by Spring - maybe "xml:...".
+				if (logger.isDebugEnabled()) {
+					logger.debug("No Spring NamespaceHandler found for XML schema namespace [" + namespaceUri + "]");
+				}
+			}
+		}
+		return originalDef;
+	}
+ ```
+&emsp;&emsp;程序走到这里，条理其实已经比较清晰了，首先获取属性或者元素的命名空间，以此来判断该元素或者属性是否适用于自定义标签的解析条件，找出自定义类型所对应的 NameSpaceHandler 并进行进一步的解析。将在自定义标签解析的详细讲解，这里暂时略过。
+&emsp;&emsp;总结下 decorateBeanDefinitionIfRequired 方法的作用，在 decorateBeanDefinitionIfRequired 中我们可以看到对程序默认的标签处理其实是直接略过，因为默认的标签到这里已经被处理完了，这里只对自定义的标签或者说对 bean 的自定义属性感兴趣。在方法中实现了寻找自定义标签并根据自定义标签寻找命名空间处理器，并进行进一步的解析。
+
+### 2.1.4 注册解析的 BeanDefinition
+&emsp;&emsp;对于配置文件该解析的都解析了，修改的也修饰完了，对于得到的 beanDefinition 已经可以满足后续的使用要求了，唯一还剩下的工作就是注册了，也就是 processBeanDefinition 函数中的 BeanDefinitionReaderUtils.registerBeanDefinition(bdHolder, getReaderContext().getRegistry()) 代码的解析了。
+ ```java
+    /**
+	 * Register the given bean definition with the given bean factory.
+	 * @param definitionHolder the bean definition including name and aliases
+	 * @param registry the bean factory to register with
+	 * @throws BeanDefinitionStoreException if registration failed
+	 */
+	public static void registerBeanDefinition(
+			BeanDefinitionHolder definitionHolder, BeanDefinitionRegistry registry)
+			throws BeanDefinitionStoreException {
+
+		// Register bean definition under primary name.
+        //使用 beanName 作为唯一标识注册 beanDefinition
+		String beanName = definitionHolder.getBeanName();
+		registry.registerBeanDefinition(beanName, definitionHolder.getBeanDefinition());
+
+		// Register aliases for bean name, if any.
+        //注册所有别名
+		String[] aliases = definitionHolder.getAliases();
+		if (aliases != null) {
+			for (String alias : aliases) {
+				registry.registerAlias(beanName, alias);
+			}
+		}
+	}
+ ```
+&emsp;&emsp;从上面的代码中，我们可以看出，解析 beanDefinition 都会被注册到BeanDefinitionRegistry 类型的实例 registry 中，而对于 beanDefinition 分成了两部分：通过 beanName注册以及通过别名的注册。
+
+##### 1. 通过 beanaName 注册 beanDefinition
+&emsp;&emsp;对于 beanDefinition 的注册，获取很多人认为的方式就是将 beanDefinition 直接放入map中就好了，使用 beanName 作为key。确实，Spring就是这么做的，只不过初次之外，它还干了点别的事情。
+ ```java
+    @Override
+	public void registerBeanDefinition(String beanName, BeanDefinition beanDefinition)
+			throws BeanDefinitionStoreException {
+
+		Assert.hasText(beanName, "Bean name must not be empty");
+		Assert.notNull(beanDefinition, "BeanDefinition must not be null");
+
+		if (beanDefinition instanceof AbstractBeanDefinition) {
+			try {
+				/**
+				 * 注册前的最后一次校验，这里的校验不同于之前的 XML 文件的教研，
+				 * 主要是对 AbstractBeanDefinition 属性中的 methodOverrides 校验
+				 *
+				 * 校验 methodOverrides 是否和方法工程并存 或者 methodOverrides 对应方法根本不存在
+				 */
+				((AbstractBeanDefinition) beanDefinition).validate();
+			}
+			catch (BeanDefinitionValidationException ex) {
+				throw new BeanDefinitionStoreException(beanDefinition.getResourceDescription(), beanName,
+						"Validation of bean definition failed", ex);
+			}
+		}
+
+		//处理已注册的 beanName 的情况
+		BeanDefinition existingDefinition = this.beanDefinitionMap.get(beanName);
+		if (existingDefinition != null) {
+			//如果对应 beanName 已经注册且配置了 bean 不允许被覆盖，则抛出异常
+			if (!isAllowBeanDefinitionOverriding()) {
+				throw new BeanDefinitionOverrideException(beanName, beanDefinition, existingDefinition);
+			}
+			//几种可能覆盖的情况的日志或跟踪日志
+			else if (existingDefinition.getRole() < beanDefinition.getRole()) {
+				// e.g. was ROLE_APPLICATION, now overriding with ROLE_SUPPORT or ROLE_INFRASTRUCTURE
+				if (logger.isInfoEnabled()) {
+					logger.info("Overriding user-defined bean definition for bean '" + beanName +
+							"' with a framework-generated bean definition: replacing [" +
+							existingDefinition + "] with [" + beanDefinition + "]");
+				}
+			}
+			else if (!beanDefinition.equals(existingDefinition)) {
+				if (logger.isDebugEnabled()) {
+					logger.debug("Overriding bean definition for bean '" + beanName +
+							"' with a different definition: replacing [" + existingDefinition +
+							"] with [" + beanDefinition + "]");
+				}
+			}
+			else {
+				if (logger.isTraceEnabled()) {
+					logger.trace("Overriding bean definition for bean '" + beanName +
+							"' with an equivalent definition: replacing [" + existingDefinition +
+							"] with [" + beanDefinition + "]");
+				}
+			}
+			//记录 beanName
+			this.beanDefinitionMap.put(beanName, beanDefinition);
+		}
+		else {
+			//bean 已经开始创建时的处理
+			if (hasBeanCreationStarted()) {
+				// Cannot modify startup-time collection elements anymore (for stable iteration)
+				synchronized (this.beanDefinitionMap) {
+					this.beanDefinitionMap.put(beanName, beanDefinition);
+					List<String> updatedDefinitions = new ArrayList<>(this.beanDefinitionNames.size() + 1);
+					updatedDefinitions.addAll(this.beanDefinitionNames);
+					updatedDefinitions.add(beanName);
+					this.beanDefinitionNames = updatedDefinitions;
+					removeManualSingletonName(beanName);
+				}
+			}
+			//正处于启动注册阶段
+			else {
+				// Still in startup registration phase
+				this.beanDefinitionMap.put(beanName, beanDefinition);
+				this.beanDefinitionNames.add(beanName);
+				removeManualSingletonName(beanName);
+			}
+			this.frozenBeanDefinitionNames = null;
+		}
+		//重置所有 beanName 对应的缓存
+		if (existingDefinition != null || containsSingleton(beanName)) {
+			resetBeanDefinition(beanName);
+		}
+	}
+ ```
+&emsp;&emsp;上面的代码，对于 bean 注册方式上，主要是几个步骤.
+1. 对 AbstractBeanDefinition 的校验。
+1. 对 beanName 已经注册的情况的处理。
+1. 对于 beanName 不存在的情况，分别在 启动注册阶段 和 已经创建 的阶段处理
+1. 加入 map 缓存
+1. 清楚解析之前留下的对应 beanName 缓存。
