--- a/Java/JVM/2、垃圾收集器与内存分配策略.md
+++ b/Java/JVM/2、垃圾收集器与内存分配策略.md
@@ -1,3 +1,24 @@
+
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [2 垃圾收集器与内存分配策略](#2-垃圾收集器与内存分配策略)
+  - [2.1 概述](#21-概述)
+  - [2.2 对象已死](#22-对象已死)
+    - [2.2.1 引用计数算法](#221-引用计数算法)
+    - [2.2.2 可达性分析算法](#222-可达性分析算法)
+    - [2.2.3 再谈引用](#223-再谈引用)
+    - [2.2.4 生存还是死亡](#224-生存还是死亡)
+    - [2.2.5 回收方法区](#225-回收方法区)
+  - [2.3 垃圾收集算法](#23-垃圾收集算法)
+    - [2.3.1 标记-清除算法](#231-标记-清除算法)
+    - [2.3.2 复制算法](#232-复制算法)
+    - [2.3.3 标记-整理算法](#233-标记-整理算法)
+    - [2.3.4 分代收集算法](#234-分代收集算法)
+
+<!-- /code_chunk_output -->
+
 # 2 垃圾收集器与内存分配策略
 &emsp;&emsp;Java与C++之间有一堵由内存动态分配和垃圾收集技术所围成的“高墙”，墙外的人向进去，墙里的人却想出来。
 ## 2.1 概述
@@ -55,7 +76,7 @@
 
 &emsp;&emsp;从运行结果中可以清楚看到，GC日志中包含“4603K-＞210K”，意味着虚拟机并没有因为这两个对象互相引用就不回收它们，这也从侧面说明虚拟机并不是通过引用计数算法来判断对象是否存活的。
 
-## 2.2.2 可达性分析算法
+### 2.2.2 可达性分析算法
 &emsp;&emsp;在主流的商用程序语言（Java、C#，甚至包括前面提到的古老的Lisp）的主流实现中，都是称通过可达性分析（Reachability Analysis）来判定对象是否存活的。这个算法的基本思路就是通过一系列的称为“GC Roots”的对象作为起始点，从这些节点开始向下搜索，搜索所走过的路径称为引用链（Reference Chain），当一个对象到GC Roots没有任何引用链相连（用图论的话来说，就是从GC Roots到这个对象不可达）时，则证明此对象是不可用的。如图2-1所示，对象object 5、object 6、object 7虽然互相有关联，但是它们到GC Roots是不可达的，所以它们将会被判定为是可回收的对象。
 ![](resources/image/2-1.png)
 <center>图 2-1 可达性分析算法判断的对象是否回收</center>
@@ -141,3 +162,31 @@ no,i'am dead:(
 
 &emsp;&emsp;虚拟机可以对满足上述3个条件的无用类进行回收，这里说的仅仅是“可以”，而并不是和对象一样，不使用了就必然会回收。是否对类进行回收，HotSpot虚拟机提供了`-Xnoclassgc`参数进行控制，还可以使用`-verbose：class`以及`-XX：+TraceClassLoading`、`-XX：+TraceClassUnLoading`查看类加载和卸载信息，**其中-verbose：class和-XX：+TraceClassLoading可以在Product版的虚拟机中使用，-XX：+TraceClassUnLoading参数需要FastDebug版的虚拟机支持**。
 &emsp;&emsp;在大量使用反射、动态代理、CGLib等ByteCode框架、动态生成JSP以及OSGi这类频繁自定义ClassLoader的场景都需要虚拟机具备类卸载的功能，以保证永久代不会溢出。
+
+## 2.3 垃圾收集算法
+* 标记-清除算法
+* 复制算法
+* 标记-整理算法
+
+### 2.3.1 标记-清除算法
+&emsp;&emsp;最基础的收集算法是`标记-清除`（Mark Sweep）算法，如同它的名字一样，算法分为“标记”和“清除”两个阶段：首先标记出所有需要回收的对象，在标记完成后统一回收所有被标记的对象，它的标记过程在上面其实已经介绍过。之所以说它是最基础的算法，是因为后续的收集算法都是基于这种思路并对其不足进行改进而得到的。它的两个过程的效率都不高；另一个是空间问题，标记清楚之后会产生大量不连续的内存碎片，空间碎片太多可能会导致程序运行过程中需要分配较大对象时，无法找到足够的连续内存而不得不提前出发另一次垃圾收集动作。标记-清除算法的执行过程如图2-2所示：
+![](resources/image/2-2.png)
+<center>图 2-2 “标记-清除”算法示意图</center>
+
+### 2.3.2 复制算法
+&emsp;&emsp;为了解决效率问题，一种称为“复制”（Copying）的收集算法出现了，它将可用内存按容量划分为大小相等的两块，每次只使用其中的一块。当这一块的内存用完了，就将还存活着的对象复制到另外一块上面，然后再把已使用过的内存空间一次清理掉。这样使得每次都是对整个半区进行内存回收，内存分配时也就不用考虑内存碎片等复杂情况，只要移动堆顶指针，按顺序分配内存即可，实现简单，运行高效。只是这种算法的代价是将内存缩小为了原来的一半，未免太高了一点。复制算法的执行过程如图2-3所示。 
+
+![](resources/image/2-3.png)
+<center>图 2-3 “复制”算法示意图</center>
+
+&emsp;&emsp;现在的商业虚拟机都采用这种收集算法来回收新生代，IBM公司的专门研究表明，新生代中的对象98%是“朝生夕死”的，所以并不需要按照1:1的比例来划分内存空间，而是**将内存分为一块较大的Eden空间和两块较小的Survivor空间，每次使用Eden和其中一块Survivor。当回收时，将Eden和Survivor中还存活着的对象一次性地复制到另外一块Survivor空间上，最后清理掉Eden和刚才用过的Survivor空间。HotSpot虚拟机默认Eden和Survivor的大小比例是8:1，也就是每次新生代中可用内存空间为整个新生代容量的90%（80%+10%），只有10%的内存会被“浪费”。当然，98%的对象可回收只是一般场景下的数据，我们没有办法保证每次回收都只有不多于10%的对象存活，当Survivor空间不够用时，需要依赖其他内存（这里指老年代）进行分配担保（Handle Promotion）**。
+&emsp;&emsp;内存的分配担保就好比我们去银行借款，如果我们信誉很好，在98%的情况下都能按时偿还，于是银行可能会默认我们下一次也能按时按量地偿还贷款，只需要有一个担保人能保证如果我不能还款时，可以从他的账户扣钱，那银行就认为没有风险了。内存的分配担保也一样，如果另外一块Survivor空间没有足够空间存放上一次新生代收集下来的存活对象时，这些对象将直接通过分配担保机制进入老年代。
+
+### 2.3.3 标记-整理算法
+&emsp;&emsp;复制收集算法在对象存活率较高时就要进行较多的复制操作，效率将会变低。更关键的是，如果不想浪费50%的空间，就需要有额外的空间进行分配担保，以应对被使用的内存中所有对象都100%存活的极端情况，所以在老年代一般不能直接选用这种算法。
+&emsp;&emsp;根据老年代的特点，有人提出了另外一种“标记-整理”（Mark-Compact）算法，标记过程仍然与“标记-清除”算法一样，但后续步骤不是直接对可回收对象进行清理，而是让所有存活的对象都向一端移动，然后直接清理掉端边界以外的内存，“标记-整理”算法的示意图如图2-4所示。
+![](resources/image/2-4.png)
+<center>图 2-4 “标记-整理”算法示意图</center>
+
+### 2.3.4 分代收集算法
+&emsp;&emsp;当前商业虚拟机的垃圾收集都采用“分代收集”（Generational Collection）算法，这种算法并没有什么新的思想，只是根据对象存活周期的不同将内存划分为几块。一般是把Java堆分为新生代和老年代，这样就可以根据各个年代的特点采用最适当的收集算法。在新生代中，每次垃圾收集时都发现有大批对象死去，只有少量存活，那就选用复制算法，只需要付出少量存活对象的复制成本就可以完成收集。而老年代中因为对象存活率高、没有额外空间对它进行分配担保，就必须使用“标记—清理”或者“标记—整理”算法来进行回收。
