--- a/Java/JVM/2、垃圾收集器与内存分配策略.md
+++ b/Java/JVM/2、垃圾收集器与内存分配策略.md
@@ -16,6 +16,12 @@
     - [2.3.2 复制算法](#232-复制算法)
     - [2.3.3 标记-整理算法](#233-标记-整理算法)
     - [2.3.4 分代收集算法](#234-分代收集算法)
+  - [2.4 HotSpot的算法实现](#24-hotspot的算法实现)
+    - [2.4.1 枚举根节点](#241-枚举根节点)
+    - [2.4.2 安全点](#242-安全点)
+    - [2.4.3 安全区域](#243-安全区域)
+  - [2.5 垃圾收集器](#25-垃圾收集器)
+    - [2.5.1 Serial收集器](#251-serial收集器)
 
 <!-- /code_chunk_output -->
 
@@ -190,3 +196,68 @@ no,i'am dead:(
 
 ### 2.3.4 分代收集算法
 &emsp;&emsp;当前商业虚拟机的垃圾收集都采用“分代收集”（Generational Collection）算法，这种算法并没有什么新的思想，只是根据对象存活周期的不同将内存划分为几块。一般是把Java堆分为新生代和老年代，这样就可以根据各个年代的特点采用最适当的收集算法。在新生代中，每次垃圾收集时都发现有大批对象死去，只有少量存活，那就选用复制算法，只需要付出少量存活对象的复制成本就可以完成收集。而老年代中因为对象存活率高、没有额外空间对它进行分配担保，就必须使用“标记—清理”或者“标记—整理”算法来进行回收。
+
+## 2.4 HotSpot的算法实现
+&emsp;&emsp;在上面我们介绍了对象存货判定算法和垃圾收集算法，而在HotSpot虚拟机上实现这些算法时，必须对算法的执行效率有严格的考量，才能保证虚拟机搞笑运行。
+
+### 2.4.1 枚举根节点
+&emsp;&emsp;从可达性分析中从 GC Root 节点找引用链这个操作为例，可作为 GC Root 的节点主要在 **全局性引用(例如：常量或类静态属性)与执行上下文(例如：栈帧中的本地变量表)** 中，现在很多应用仅仅是方法区就有数百兆，如果要逐个检查这里面的引用，那么必然会消耗很多时间。
+&emsp;&emsp;另外，可达性分析队执行时间的敏感还体现在GC停顿上，因为这项分析工作必须在一个能确保一致性的快照中进行——这里"一致性"的意思是指在整个分析期间整个执行系统看起来就像是冻结在某个时间点上，不可以出现分析过程中对对象引用关系还在变化的情况，这点不满足的话分析结果准确性就无法得到保证。这点事导致GC进行时必须停顿所有Java执行线程(Sun将这件事情称为"Stop The World")的其中一个重要原因，即使是在号称(几乎)不会发生停顿的CMS收集器中，枚举根节点也是必须要停顿的。
+&emsp;&emsp;由于目前的主流Java虚拟机使用的都是准确式GC，所以当执行系统停顿下来后，并不需要一个不漏地检查完所有执行上下文和全局的引用位置，虚拟机应当是有办法直接得知哪些地方存放着对象引用。在HotSpot的实现中，是使用一组称为OopMap的数据结构来达到这个目的的，在类加载完成的时候，HotSpot就把对象内什么偏移量上是什么类型的数据计算出来，在JIT编译过程中，也会在特定的位置记录下栈和寄存器中哪些位置是引用。这样，GC在扫描时就可以直接得知这些信息了。下面的代码清单2-3是HotSpot Client VM生成的一段String.hashCode（）方法的本地代码，可以看到在0x026eb7a9处的call指令有OopMap记录，它指明了EBX寄存器和栈中偏移量为16的内存区域中各有一个普通对象指针（Ordinary Object Pointer）的引用，有效范围为从call指令开始直到0x026eb730（指令流的起始位置）+142（OopMap记录的偏移量）=0x026eb7be，即hlt指令为止。
+>代码清单2-3 Sting.hashCode() 方法编译后的本地代码
+ ```C++
+[Verified Entry Point]
+0x026eb730：mov%eax，-0x8000（%esp）
+……
+；ImplicitNullCheckStub slow case
+0x026eb7a9：call 0x026e83e0
+；OopMap{ebx=Oop[16]=Oop off=142}
+；*caload
+；-java.lang.String：hashCode@48（line 1489）
+；{runtime_call}
+0x026eb7ae：push$0x83c5c18
+；{external_word}
+0x026eb7b3：call 0x026eb7b8
+0x026eb7b8：pusha
+0x026eb7b9：call 0x0822bec0；{runtime_call}
+0x026eb7be：hlt
+ ```
+### 2.4.2 安全点
+&emsp;&emsp;在OopMap的协助下，HotSpot可以快速且准确地完成GC Roots枚举，但一个很现实的问题随之而来：可能导致引用关系变化，或者说OopMap内容变化的指令非常多，如果为每一条指令都生成对应的OopMap，那将会需要大量的额外空间，这样GC的空间成本将会变得很高。
+&emsp;&emsp;**实际上，HotSpot也的确没有为每条指令都生成OopMap，前面已经提到，只是在“特定的位置”记录了这些信息，这些位置称为安全点（`Safepoint`）**，即程序执行时并非在所有地方都能停顿下来开始GC，只有在到达安全点时才能暂停。`Safepoint`的选定既不能太少以致于让GC等待时间太长，也不能过于频繁以致于过分增大运行时的负荷。所以，安全点的选定基本上是以程序“是否具有让程序长时间执行的特征”为标准进行选定的——因为每条指令执行的时间都非常短暂，程序不太可能因为指令流长度太长这个原因而过长时间运行，**“长时间执行”** 的最明显特征就是指令序列复用，例如**方法调用、循环跳转、异常跳转**等，所以具有这些功能的指令才会产生Safepoint。
+&emsp;&emsp;对于Sefepoint，另一个需要考虑的问题是如何在GC发生时让所有线程（这里不包括执行JNI调用的线程）都“跑”到最近的安全点上再停顿下来。这里有两种方案可供选择：
+* **抢先式中断（Preemptive Suspension）**:
+抢先式中断不需要线程的执行代码主动去配合，在GC发生时，首先把所有线程全部中断，如果发现有线程中断的地方不在安全点上，就恢复线程，让它“跑”到安全点上。现在几乎没有虚拟机实现采用抢先式中断来暂停线程从而响应GC事件
+* **主动式中断（Voluntary Suspension）**:
+主动式中断的思想是当GC需要中断线程的时候，不直接对线程操作，仅仅简单地设置一个标志，各个线程执行时主动去轮询这个标志，发现中断标志为真时就自己中断挂起。轮询标志的地方和安全点是重合的，另外再加上创建对象需要分配内存的地方。下面代码清单2-4中的test指令是HotSpot生成的轮询指令，当需要暂停线程时，虚拟机把0x160100的内存页设置为不可读，线程执行到test指令时就会产生一个自陷异常信号，在预先注册的异常处理器中暂停线程实现等待，这样一条汇编指令便完成安全点轮询和触发线程中断。
+> 代码清单2-4 轮询指令
+ ```C++
+0x01b6d627：call 0x01b2b210；OopMap{[60]=Oop off=460}
+；*invokeinterface size
+；-Client1：main@113（line 23）
+；{virtual_call}
+0x01b6d62c：nop
+；OopMap{[60]=Oop off=461}
+；*if_icmplt
+；-Client1：main@118（line 23）
+0x01b6d62d：test%eax，0x160100；{poll}
+0x01b6d633：mov 0x50（%esp），%esi
+0x01b6d637：cmp%eax，%esi
+ ```
+
+### 2.4.3 安全区域
+&emsp;&emsp;使用Safepoint似乎已经完美地解决了如何进入GC的问题，但实际情况却并不一定。Safepoint机制保证了程序执行时，在不太长的时间内就会遇到可进入GC的Safepoint。但是，程序“不执行”的时候呢？所谓的程序不执行就是没有分配CPU时间，典型的例子就是线程处于Sleep状态或者Blocked状态，这时候线程无法响应JVM的中断请求，“走”到安全的地方去中断挂起，JVM也显然不太可能等待线程重新被分配CPU时间。对于这种情况，就需要安全区域（Safe Region）来解决。
+&emsp;&emsp;**安全区域是指在一段代码片段之中，引用关系不会发生变化。在这个区域中的任意地方开始GC都是安全的。我们也可以把Safe Region看做是被扩展了的Safepoint。**
+&emsp;&emsp;在线程执行到Safe Region中的代码时，首先标识自己已经进入了Safe Region，那样，当在这段时间里JVM要发起GC时，就不用管标识自己为Safe Region状态的线程了。在线程要离开Safe Region时，它要检查系统是否已经完成了根节点枚举（或者是整个GC过程），如果完成了，那线程就继续执行，否则它就必须等待直到收到可以安全离开Safe Region的信号为止。
+&emsp;&emsp;
+
+## 2.5 垃圾收集器
+&emsp;&emsp;如果说收集算法是内存回收的方法论，那么垃圾收集器就是内存回收的具体实现。Java虚拟机规范中对垃圾收集器应该如何实现并没有任何规定，因此不同的厂商、不同版本的虚拟机所提供的垃圾收集器都可能会有很大差别，并且一般都会提供参数供用户根据自己的应用特点和要求组合出各个年代所使用的收集器。这里讨论的收集器基于JDK 1.7 Update 14之后的HotSpot虚拟机（在这个版本中正式提供了商用的G1收集器，之前G1仍处于实验状态），这个虚拟机包含的所有收集器如图2-5所示。
+![](resources/image/2-5.png)
+<center>图 2-5 HotSpot虚拟机的垃圾收集器</center>
+
+&emsp;&emsp;图2-5展示了7种作用于不同分代的收集器，如果两个收集器之间存在连线，就说明它们可以搭配使用。虚拟机所处的区域，则表示它是属于新生代收集器还是老年代收集器。接下来笔者将逐一介绍这些收集器的特性、基本原理和使用场景，并重点分析CMS和G1这两款相对复杂的收集器，了解它们的部分运作细节。
+&emsp;&emsp;在介绍这些收集器各自的特性之前，我们先来明确一个观点：虽然我们是在对各个收集器进行比较，但并非为了挑选出一个最好的收集器。因为直到现在为止还没有最好的收集器出现，更加没有万能的收集器，所以我们选择的只是对具体应用最合适的收集器。这点不需要多加解释就能证明：如果有一种放之四海皆准、任何场景下都适用的完美收集器存在，那HotSpot虚拟机就没必要实现那么多不同的收集器了。
+
+### 2.5.1 Serial收集器
+&emsp;&emsp;Serial收集器是最基本、发展历史最悠久的收集器，曾经（在JDK 1.3.1之前）是虚拟机新生代收集的唯一选择。大家看名字就会知道，这个收集器是一个单线程的收集器，但它的“单线程”的意义并不仅仅说明它只会使用一个CPU或一条收集线程去完成垃圾收集工作，更重要的是在它进行垃圾收集时，必须暂停其他所有的工作线程，直到它收集结束。“Stop The World”这个名字也许听起来很酷，但这项工作实际上是由虚拟机在后台自动发起和自动完成的，在用户不可见的情况下把用户正常工作的线程全部停掉，这对很多应用来说都是难以接受的。读者不妨试想一下，要是你的计算机每运行一个小时就会暂停响应5分钟，你会有什么样的心情？图2-6示意了Serial/Serial Old收集器的运行过程。
