--- a/Java/Concurrent/对象共享.md
+++ b/Java/Concurrent/对象共享.md
@@ -91,4 +91,88 @@ public class UnsafePublish {
     }
 }
  ```
- 
+&emsp;&emsp;上述代码略看没什么问题，但是其确是将内部的可变状态逸出，states 可以被外部任意线程修改其内容。数组states已经逸出了它所在的作用于，因为这个本应是私有的变量已经被发布。
+&emsp;&emsp;还有一种发布对象或其内部状态的机制就是发布一个内部类的实例，如下代码清单ThisEscape所示。当 ThisEscape 发布EventListener 时，也隐含地发布了ThisEscape实例本身，因为在这个内部类的实例中，包含了对ThisEscape实例的隐含引用。
+ ```java
+ public class ThisEscapeSimpleExample {
+     public ThisEscapeSimpleExample(EventSource source){
+         source.registerListener(
+             new EventListener(){
+                 public void onEvent(Event e){
+                     doSomething(e);
+                 }
+             }
+         )
+     }
+ }
+ ```
+&emsp;&emsp;为什么说这种情况是不安全的呢？我们先用一个比较简单的例子来说明下，看下面这段代码：
+ ```java
+ public class ThisEscape {
+    private int a = 0;
+    public ThisEscape(){
+        new Thread(()->{
+            System.out.println(a);
+        }).start();
+        try {
+            Thread.sleep(3);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        a = 15;
+    }
+
+    public static void main(String[] args) {
+        new ThisEscape();
+    }
+ }
+ ```
+&emsp;&emsp;打印结果0，因为在打印的时候ThisEscape还未构造完成。在ThisEscape的构造方法中，我们启动了一个线程，而且在构造方法中执行了这个线程，那么就有很大的风险在执行过程中调用了该类的其他方法或改变了该类的某个属性，但该类还没有构造完成，从而到导致未知错误。
+&emsp;&emsp;现在我们再来看上面的代码，这里需要说明一下的是`doSomething`方法，是属于ThisEscape类的。当内部的EventListener实例发布时，在外部封装的ThisEscape实例也逸出了。**当且仅当构造函数返回时，对象才处于可预测的和一致的状态。**因此当前发布的是一个尚未构造完成的对象。即使发布对象的语句位于构造函数的最后一行也是如此。
+> **不要在构造过程中使用this应用逸出。**
+&emsp;&emsp;在构造过程中使this应用逸出的一个常见错误是，在构造函数中启动一个线程。在上面的例子中，我们可以看到 `source.registerListener` 其实就是一个注册监听，外部的线程可能正在处理通知，而在我们构造ThisEscape的时候，可能就会接收到其他线程的调用，并执行`doSomething`方法，从而使我们正在构建的ThiEscape方法出现未知的错误。
+&emsp;&emsp;当对象在其构造方法中创建一个线程时，无论是显示创建（通过将它传给构造函数）还是隐式创建，this应用都会被新创建的线程共享。在对象尚未完全构造之前，新的线程就可以看见它。在构造函数中创建线程并没有错误，但最好不要立即启动他，而是通过一个start或initialize方法来启动。
+&emsp;&emsp;在构造函数中调用一个可改写实例方法时(既不是私有方法，也不是终结方法)，同样会导致this应用在构造函数中逸出。
+&emsp;&emsp;下面我们来看看使用工厂方法来防止this引用在构造过程中逸出。
+ ```java
+ public class SafeListener {
+     private final EventListener listener;
+     
+     private SafeListener() {
+        listner = new EventListener(){
+            public void onEvent(Event e){
+                doSomething(e);
+            }
+        }
+     }
+
+     public static SafeListener newInstance(EventSource source) {
+         SafeListener safeListener = new SafeListener();
+         source.registerListener(safe.listener);
+         return safe;
+     }
+ }
+ ```
+&emsp;&emsp;为什么说这个是正确的构造呢，首先构造函数是私有的，其他线程无法访问，第二，newIsntance方法中首先做的就是构造SafeListener，再讲完全构建成功的safeListener暴露给了隐式线程。
+
+## 3 线程封闭
+&emsp;&emsp;当访问共享的可变数据时，通常需要使用同步。一种避免使用同步的方法就是不共享数据。这种技术被称为线程封闭(Thread Confinement),它是实现线程安全性的最简单方式之一。当某个对象封闭在一个线程中时，这种方法将自动实现线程安全，即是被封闭的对象本身不是线程安全的。例如局部变量和ThreadLocal类，但即便如此，程序员任然需要负责确保封闭在线程中的对象不会从线程中逸出。
+
+### 3.1 Ad-hoc 线程封闭
+&emsp;&emsp;Ad-hoc线程封闭是指，维护线程封闭性的职责完全由程序实现来承担。Ad-hoc线程封闭非常脆弱，因为没有任何一种语言特性能将对象封闭到目标线程上。一般来说使用Ad-hoc线程封闭计数时，通常是因为要将某个特定的子系统实现为一个单线程子系统。
+
+### 3.2 栈封闭
+&emsp;&emsp;栈封闭其实就是通过局部变量才能访问对象。局部变量的固有属性之一就是封闭在执行线程中。它们位于执行线程的栈中，其他线程无法访问这个栈。这是因为java的内存模型，栈的生命周期与线程一样且是线程私有的。
+&emsp;&emsp;如果在线程内部(Within-Thread)上下文中使用非线程安全的对象，那么该对象任然是线程安全的。
+
+### 3.3 ThreadLocal类
+&emsp;&emsp;维持线程封闭性的一种更规范方法是使用ThreadLocal，这个类能够使线程中的某个值与保存值的对象关联起来。
+&emsp;&emsp;ThreadLocal对象通常用于防止对可变的单实例变量(Singleton)或全局变量进行共享。
+
+### 3.4 不变性
+&emsp;&emsp;某个对象在被创建后其状态就不能被更改，那么这个对象就称为不可变对象。线程安全是不可变对象的固有属性之一，它们的不变性条件就是由构造函数创建的，只要它们的状态不改变，那么这些不变性条件就能得以维持。
+> 不可变对象一定是线程安全的。
+&emsp;&emsp;当满足一下几个条件时，对象才是不可变的：
+* 对象创建以后其状态就不能修改。
+* 对象的所有域都是final类型。
+* 对象是正确创建的(在对象创建期间，this引用没有逸出)。
