--- a/Java/Concurrent/3、对象共享.md
+++ b/Java/Concurrent/3、对象共享.md
@@ -10,6 +10,19 @@
     - [1.3 加锁与可见性](#13-加锁与可见性)
     - [1.4 Volatile 关键字](#14-volatile-关键字)
   - [2. 发布与逸出](#2-发布与逸出)
+  - [3 线程封闭](#3-线程封闭)
+    - [3.1 Ad-hoc 线程封闭](#31-ad-hoc-线程封闭)
+    - [3.2 栈封闭](#32-栈封闭)
+    - [3.3 ThreadLocal类](#33-threadlocal类)
+    - [3.4 不变性](#34-不变性)
+      - [3.4.1 Final域](#341-final域)
+    - [3.5 安全发布](#35-安全发布)
+      - [3.5.1 不正确的发布：正确的对象被破坏](#351-不正确的发布正确的对象被破坏)
+      - [3.5.2 不可变对象与初始化安全性](#352-不可变对象与初始化安全性)
+      - [3.5.3 安全发布的常用模式](#353-安全发布的常用模式)
+      - [3.5.4 事实不可变对象](#354-事实不可变对象)
+      - [3.5.5 可变对象](#355-可变对象)
+      - [3.5.6 安全地共享对象](#356-安全地共享对象)
 
 <!-- /code_chunk_output -->
 
@@ -176,3 +189,77 @@ public class UnsafePublish {
 * 对象创建以后其状态就不能修改。
 * 对象的所有域都是final类型。
 * 对象是正确创建的(在对象创建期间，this引用没有逸出)。
+
+#### 3.4.1 Final域
+&emsp;&emsp;final 类型的域是不能修改的(如果final域所引用的对象是可变的，那么这个被引用的对象是可以修改的)。同时在Java内存模型中，final域能确保初始化过程的安全性，从而可以不受限制的访问不可变对象，并在共享这些对象时无需同步。
+> “除非需要更高的可见性，否则应将所有的域都声明为私有域” 是一个良好的变成习惯，“除非需要某个域是可变的，否则应将其声明为final域”也是一个良好的变成习惯。
+
+###  3.5 安全发布
+&emsp;&emsp;以下代码也是不安全的发布。
+ ```java
+    //不安全的发布
+    public Holder holder;
+
+    public void initialize(){
+        holder = new Holder(42);
+    }
+ ```
+&emsp;&emsp;这个看似没问题的示例何以会运行失败。由于存在可见性问题，其他线程看到的Holder对象将处于不一致的状态。即是在该对象的构造函数中已经正确地构建了不变性条件。这种不正确的发布导致其他线程看到尚未创建完成的对象。
+
+#### 3.5.1 不正确的发布：正确的对象被破坏
+&emsp;&emsp;某个观察该对象的线程将看到对象处于不一致的状态，然后看到对象的状态突然发生变化，即是线程在对象发布后还没有修改过。如使用上节代码中的不安全发布方式，那么一个线程在调用assertSanity时将抛出AssertionError。
+ ```java
+ class Holder{
+    private int n;
+    public Holder(int n){
+        this.n = n;
+    }
+
+    public void assertSanity(){
+        if(n != n){
+            throw new AssertionError("This statement is false.");
+        }
+    }
+}
+ ```
+&emsp;&emsp;由于没有使用同步来确保Holder对象对其他线程可见，因此将Holder称为“未被正确发布”。在未被正确发布的对象中存在两个问题。首先，除了发布对象的线程外，其他线程可以看到Holder域是一个失效值，因此将看到一个空应用或者之前的旧值。然而，更糟糕的情况下，线程看到Holder应用的值是最新的，但Holder状态的值确实失效的。情况变得更加不可预测的是，某个线程在第一次读取域时得到失效值，而再次读取这个域时会得到一个更新值，这也是assertSainty抛出AssertionError的原因。
+&emsp;&emsp;如果没有足够的同步，那么当在多个线程间共享数据时将发生一些非常奇怪的事情。
+
+#### 3.5.2 不可变对象与初始化安全性
+&emsp;&emsp;由于不可变对象是一种非常重要的对象，因此Java内存模型为不可变对象的共享提供了一种特殊的初始化安全性保证。我们已经知道，即是某个对象引用对其他线程时可见的，也并不意味着对象状态对于使用该对象的线程来说一定是可见的。为了确保对象状态能呈现出一致的视图，就必须使用同步。
+&emsp;&emsp;另外一方面，即是在发布不可变对象的引用时没有使用同步，也仍然可以安全地访问该对象。为了维持这种初始化安全性的保证，必须满足不可变性的所有需求：状态不可修改，所有域都是final类型，以及正确的构造过程。
+> 任何线程都可以在不需要额外同步的情况下安全地访问不可变对象，即是在发布这些对象时没有使用同步。
+
+&emsp;&emsp;这种保证还将延伸到被正确创建对象中所有final类型的域。在没有额外同步的情况下，也可以安全地访问final类型的域。然而，如果final类型的域所指向的是可变对象，那么在访问这些域所指向的对象的状态任然需要同步。
+
+#### 3.5.3 安全发布的常用模式
+&emsp;&emsp;可变对象必须通过安全的方式来发布，这通常意味着在发布和使用该线程时都必须使用同步。现在，我们重点介绍如何确保使用对象的线程能够看到该对象处于已发布的状态，并稍后介绍如何在对象发布后对其可见性进行修改。
+> 要安全发布一个对象，对象的引用以及对象的状态必须同时对线程可见。一个正确构造的对象可以通过以下方式来安全地发布：
+> * 在静态初始化函数中初始化一个对象引用。
+> * 将对象的引用使用volatile类型或者 保存到AtomicRefreence 对象中
+> * 将对象的引用保存到某个正确构造对象的final类型中。
+> * 将对象的引用保存到一个由锁保护的域中。
+
+&emsp;&emsp;线程安全裤中的容器类提供了以下的安全发布保证：
+* 通过一个键或者值放入 Hashtable、Collections.synchronizedMap或者ConcureentMap中，可以安全地将它发布给任何从这些容器中访问它的线程(无论是直接访问还是通过迭代器访问)。
+* 通过将某个元素放入 Vector、CopyOnWriteArrayList、CopyOnWriteArraySet、Collections.synchronizedList或者Collections.synchronizedSet中，可以将该元素安全地发布到任何从这些容器中访问该元素的线程。
+* 通过将某个元素放入 BlockingQueue 或者 ConcurrentLinkedQueue 中，可以将该元素安全地发布到任何从这些队列中访问该元素的线程。
+&emsp;&emsp;类库中的其他数据传输机制(例如Future和Exchanger)同样能实现安全发布，在介绍这些机制时将讨论它们的安全发布功能。
+
+#### 3.5.4 事实不可变对象
+&emsp;&emsp;如果对象在发布后不会被修改，那么对于其他在没有额外同步的情况下安全地访问这些对象的线程来说，安全发布是足够的。所有的安全发布机制都能确保，当对象的引用对所有访问该对象的线程可见时，对象发布时的状态对所有线程也是可见的，并且如果对象状态不会再改变，那么久足以确保任何访问都是安全的。
+&emsp;&emsp;**如果对象从技术上来看似可变的，但其状态在发布后不会再改变，那么可以把这种对象称为“事实不可变对象(Effectively Immutable Object)”**
+> 在没有额外的同步的情况下，任何线程都可以安全地使用被安全发布的事实不可变对象。
+
+#### 3.5.5 可变对象
+&emsp;&emsp;如果对象在构造后不可修改，那么安全发布只能确保“发布当时”状态的可见性。对于可变对象，不仅在发布对象时需要使用同步，而且在每次对象访问时同样需要使用同步来确保后续修改操作的可见性。要安全地共享可变对象，那么这些对象就必须被安全地发布，并且必须是线程安全的或者由某个锁保护起来。
+> 对象的发布需求取决于它的可变性：
+> * 不可变对象可以通过任意机制来发布。
+> * 试试不可变对象必须通过安全方式来发布。
+> * 可变对象必须通过安全方式来发布，并且必须是线程安全的或者由某个锁保护起来。
+
+#### 3.5.6 安全地共享对象
+&emsp;&emsp;在并发程序中使用和共享对象时，可以使用一些使用的策略，包括：
+* **线程封闭** 线程封闭的对象只能由一个线程持有，对象被封装在该线程中，并且只有由这个线程修改。
+* **只读共享** 在没有额外同步的情况下，共享的只读对象可以由多个线程并发访问，但任何线程都不能修改它。共享的只读对象包括不可变对象和事实不可变对象。
+* **保护对象** 被保护的对象只能通过持有特定的锁来访问。保护对象包括封装在其他线程安全对象中的对象，以及已发布的并且由某个特定锁保护的对象。
