--- a/Java/Concurrent/3、对象共享.md
+++ b/Java/Concurrent/3、对象共享.md
@@ -255,7 +255,7 @@ public class UnsafePublish {
 &emsp;&emsp;如果对象在构造后不可修改，那么安全发布只能确保“发布当时”状态的可见性。对于可变对象，不仅在发布对象时需要使用同步，而且在每次对象访问时同样需要使用同步来确保后续修改操作的可见性。要安全地共享可变对象，那么这些对象就必须被安全地发布，并且必须是线程安全的或者由某个锁保护起来。
 > 对象的发布需求取决于它的可变性：
 > * 不可变对象可以通过任意机制来发布。
-> * 试试不可变对象必须通过安全方式来发布。
+> * 事实不可变对象必须通过安全方式来发布。
 > * 可变对象必须通过安全方式来发布，并且必须是线程安全的或者由某个锁保护起来。
 
 #### 3.5.6 安全地共享对象
