--- a/Java/Concurrent/4、对象的组合.md
+++ b/Java/Concurrent/4、对象的组合.md
@@ -1,4 +1,7 @@
 # 4 对象的组合
+
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
 ## 4.1 设计线程安全的类
 &emsp;&emsp;在设计线程安全类的过程中，需要包含一下三个基本要素：
 * 找出构成对象状态的所有变量。
@@ -56,5 +59,6 @@
 &emsp;&emsp;lower,upper是两个线程安全的变量，但是他们 NumberRange 却增加了一个不变条件，lower < upper 导致两个线程安全的变量不再独立。
 > 如果一个类是由多个独立且线程安全的状态变量组成，并且在所有的操作中都不包含无效状态转换，那么可以将线程安全委托给底层的状态变量。
 
-
+#### 4.3.3 发布底层的状态变量
+> 如果一个状态变量时线程安全的，并且没有任何不变性条件来约束它的值，在变量的操作上也不存在任何不允许的状态转换，那么久可以安全地发布这个变量。
 
