Serial Thread Confinement

--- a/Java/Concurrent/5、基础构建模块.md
+++ b/Java/Concurrent/5、基础构建模块.md
@@ -16,3 +16,7 @@
 
 ## 5.3 阻塞队列和生产者 - 消费者模式
 > 在构建高可靠的应用程序时，有界队列是一种强大的资源管理工具：它们能抑制并防止产生过多的工作项，使应用程序在负荷过载的情况下变得更加健壮。
+
+### 5.3.1 串行线程封闭
+&emsp;&emsp;对于可变对象，生产者 —— 消费者这种设计与阻塞队列一起，促进了串行线程封闭，从而将对象所有权从生产者交付给消费者。线程封闭对象只能由单个线程拥有，但可以通过安全地发布该对象来“转移”所有权。在转移所有权后，也只有另一个线程能够获取这个对象的访问权限，并且发布对象的线程不会再访问它。这种安全的发布确保了对象状态对新的所有者来说是可见的，并且由于最初的所有者不会再访问它，因此对象将封闭在新的线程中。新的所有者线程可以对该对象做任意修改，因为它具有独占的访问权。
+&emsp;&emsp;线程池利用了串行线程封闭，将对象“借给”一个请求线程。只要对象池包含足够的内存同步来安全地发布池中对象，并且只要克服代码本身不会发布池中的对象，或者在将对象返回给对象池后就不再使用它，那么久可以安全地在线程之间传递所有权。
