--- a/Java/Concurrent/5、基础构建模块.md
+++ b/Java/Concurrent/5、基础构建模块.md
@@ -1,4 +1,26 @@
 # 5 基础构建模块
+
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [5 基础构建模块](#5-基础构建模块)
+  - [5.1 同步容器类](#51-同步容器类)
+    - [5.1.1 同步容器类的问题](#511-同步容器类的问题)
+    - [5.1.2 迭代器与ConcurrentModificationException](#512-迭代器与concurrentmodificationexception)
+    - [5.1.3 隐藏迭代器](#513-隐藏迭代器)
+  - [5.2 并发容器](#52-并发容器)
+  - [5.3 阻塞队列和生产者 - 消费者模式](#53-阻塞队列和生产者-消费者模式)
+    - [5.3.1 串行线程封闭](#531-串行线程封闭)
+    - [5.3.2 双端队列与工作密取](#532-双端队列与工作密取)
+  - [5.4 阻塞方法和中断方法](#54-阻塞方法和中断方法)
+  - [5.5 同步工具类](#55-同步工具类)
+    - [5.5.1 闭锁](#551-闭锁)
+    - [5.5.2 FutureTask](#552-futuretask)
+    - [5.5.3 信号量](#553-信号量)
+
+<!-- /code_chunk_output -->
+
 ## 5.1 同步容器类
 &emsp;&emsp;同步容器类包括Vector和Hashtable，此外还包括一些功能类似的类，这些同步的封装器类由Collections.synchronizedXxx等工厂方法创建的。这些类实现线程安全的方式：降它们封装起来，并对每个公有方法都进行同步，使得每次只有一个线程能够访问容器的状态。
 ### 5.1.1 同步容器类的问题
@@ -20,3 +42,111 @@
 ### 5.3.1 串行线程封闭
 &emsp;&emsp;对于可变对象，生产者 —— 消费者这种设计与阻塞队列一起，促进了串行线程封闭，从而将对象所有权从生产者交付给消费者。线程封闭对象只能由单个线程拥有，但可以通过安全地发布该对象来“转移”所有权。在转移所有权后，也只有另一个线程能够获取这个对象的访问权限，并且发布对象的线程不会再访问它。这种安全的发布确保了对象状态对新的所有者来说是可见的，并且由于最初的所有者不会再访问它，因此对象将封闭在新的线程中。新的所有者线程可以对该对象做任意修改，因为它具有独占的访问权。
 &emsp;&emsp;线程池利用了串行线程封闭，将对象“借给”一个请求线程。只要对象池包含足够的内存同步来安全地发布池中对象，并且只要克服代码本身不会发布池中的对象，或者在将对象返回给对象池后就不再使用它，那么久可以安全地在线程之间传递所有权。
+
+### 5.3.2 双端队列与工作密取
+&emsp;&emsp;Java 6 增加了两种容器类型，Deque(发音为“deck”)和BlockingDeque，它们分别对 Queue 和 BlockingQueue 进行了扩展。 Deque 是一个双端队列，实现了在队列透和队列尾的高效插入和移除。具体实现包括 ArrayDeque 和 LinkedBlockingDeque。
+&emsp;&emsp;正如阻塞队列适用于生产者-消费者模式，双端队列同样适用于另一种模式，即工作密取(Work Stealing)。生产者-消费者设计中，所有消费者有一个共享的工作队列，而在工作密取设计中，每个消费者都有各自的双端队列。如果一个消费者完成了自己的双端队列中的全部工作，那么它可以从其他消费者双端队列末尾秘密地获取工作。密取工作方式比传统的生产者-消费者模式具有更高的可伸缩性，这是因为工作者线程不会在单个共享的任务队列上发生竞争。在大多数时候它们都只是访问自己的双端队列，从而极大地减少了竞争。当工作者需要访问另外一个队列时，它会从队列的尾部而不是从头部获取工作，因此进一步降低了队列上的竞争程度。
+&emsp;&emsp;工作密取非常适用于既是消费者也是生产者问题——当执行某个工作时可能导致出现更多的工作的工作。例如：在网页爬虫程序中处理一个页面，通常会发现有更多的页面需要处理。类似的还有许多搜索图的算法，例如在垃圾回收阶段对堆进行标记，都可以通过工作密取机制类实现高效并行。当一个工作线程找到新的任务单元时，它会将其放到自己的队列的末尾(或者在工作共享设计模式中，放入其他工作线程的队列中)。当双端队列为空时，它会在另一个线程的队列队尾查找新的任务，从而确保每个线程都保持忙碌状态。
+
+## 5.4 阻塞方法和中断方法
+&emsp;&emsp;线程可能会阻塞或暂停执行，原因有多重：等待I/O操作，等待获得一个锁，等待从 Thread.sllep 方法中醒来，或是等待另一个线程的计算结果。当线程阻塞时，它通常被挂起，并处于某种阻塞状态(BLOCKED、WAITING或TIMED_WAITING)。阻塞操作与执行时间很长的普通操作的差别在于，被阻塞的线程必须等待某哥不受它控制的事件发生后才能继续执行，例如等待I/O操作完成，等待某个锁变成可用，或者等待外部计算的结束。当某个外部事件发生时，线程被置回 RUNNABLE 状态，并可以再次被调度执行。
+&emsp;&emsp;BlockingQueu的put和take等方法会抛出受检查异常(Checked Exception)InterruptedException,这与类库中其他一些方法的做法相同，例如 Thread.sleep。当某个方法抛出InterruptedException时，表示该方法是一个阻塞方法，如果这个方法被中断，那么它将努力提前结束阻塞状态。
+&emsp;&emsp;Thread提供了interrupt方法，用于中断线程或者查询线程是否已经被中断。每个线程都有一个布尔类型的属性，表示线程的中断状态，当中断线程时将设置这个状态。
+&emsp;&emsp;中断是一种协作机制。一个线程不能强制其他线程停止正在执行的操作而去执行其他的操作。当线程A中断B时，A仅仅是要求B在执行到某个可以暂停的地方停止正在执行的操作——前提是如果B愿意停止下来。虽然在Api或者语言规范中并没有为中断定义任何特定应用级别的寓意，但最常使用中断的情况就是取消某个操作。方法对中断请求的响应度越高，就越容易即是取消哪些执行时间很长的操作。
+&emsp;&emsp;当在代码中调用一个将抛出InterruptedException异常的方法时，你自己的方法也就变成了一个阻塞方法，并且必须处理对中断的响应。对于库代码来说，有两种基本选择：
+&emsp;&emsp;**传递InterruptedException**。避开这个异常通常是最明智的策略——只需把InterruptedException传递给方法的调用者。传递InterruptedException的方法包括，根本不捕获该异常，或者捕获该异常，然后再自行某些简单的清理工作后再次抛出这个异常。
+&emsp;&emsp;**恢复中断**有时候不能抛出InterruptedException，例如当代码是Runnable的一部分时。在这些情况下，必须捕获InterruptedException，并通过调用当前线程上的interrupt方法恢复中断状态，这样在调用栈中更高成的代码将看到引发了一个中断。
+
+## 5.5 同步工具类
+&emsp;&emsp;在容器类中，阻塞队列是一种独特的类：它们不仅能作为保存对象的容器，还能协调生产者和消费者等线程之间的控制流，因为take和put等方法将阻塞，知道队列达到期望的状态(队列既非空，也非满)。
+&emsp;&emsp;同步工具类可以是任何一个对象，只要它根据自身的状态来协调线程的控制流。阻塞队列可以作为同步工具类，其他类型的同步工具类还包括信号量(Semaphore)、栅栏(Barrier)以及闭锁(Latch)。
+&emsp;&emsp;所有的同步工具类都包含一些特定的结构化属性：它们封装了一些状态，这些状态将决定执行同步工具的线程是继续执行还是等待，此外还提供了一些方法对状态进行操作，以及另外一些方法用于高效地等待同步工具进入到预期状态。
+
+### 5.5.1 闭锁
+&emsp;&emsp;闭锁是一种同步工具类，可以延迟线程的进度直到其到达终止状态[CPJ 3.4.2]。闭锁的作用相当于一扇门：在闭锁到达结束状态之前，这扇门一直是关闭的，并且没有任何线程能通过，当到达结束状态时，这扇门会打开并允许所有的线程通过。当闭锁到达结束状态后，将不会再改变状态，因此这扇门将用于保持打开状态。闭锁可以用来确保某些活动直到其他活动都完成后才继续执行，例如：
+* 确保某个计算在其需要的所有资源都被初始化之后才继续执行。二元闭锁(包括两个状态)可以用来表示“资源R已经被初始化”，而所有需要R的操作都必须先在这个闭锁上等待。
+* 确保某个服务在其依赖的所有其他服务都已经启动之后才启动。每个服务都有一个相关的二元闭锁。当启动服务S时，将首先在S依赖的其他服务的闭锁上等待，在所有依赖的服务都启动后会释放闭锁S，这样其他依赖S的服务才能继续执行。
+* 等待直到某个操作的所有参与者（例如：在多玩家游戏中的所有玩家）都就绪再继续执行。在这种情况中，当所有玩家都准备就绪时，闭锁将到达结束状态。
+&emsp;&emsp;CountDownLatch是一种灵活的闭锁实现，可以在上述各种情况中使用，它可以使一个或多个线程等待一组事件发生。闭锁状态包括一个计数器，该计数器被初始化为一个正数，表示需要等待的事件数量。countDown方法递减计数器，表示有一个事件已经发生了，而await方法等待计数器达到零，或者等待中的线程中断，或者等待超时。
+ ```java
+ public class TestHarness {
+
+    public long timeTasks(int nThreads, final Runnable task) throws InterruptedException {
+        final CountDownLatch startGate = new CountDownLatch(1);
+        final CountDownLatch endGate = new CountDownLatch(nThreads);
+
+        for(int i = 0; i < nThreads; i++){
+            Thread t = new Thread(() -> {
+                try{
+                    startGate.await();
+                    task.run();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                } finally {
+                    endGate.countDown();
+                }
+            });
+            t.start();
+        }
+        long starTime = System.nanoTime();
+        startGate.countDown();
+        endGate.await();
+        long endTime = System.nanoTime();
+        return endTime - starTime;
+    }
+
+    public static void main(String[] args) throws InterruptedException {
+        TestHarness testHarness = new TestHarness();
+        long time = testHarness.timeTasks(5,()->{
+            System.out.println(Thread.currentThread().getName());
+        });
+        System.out.println(time);
+    }
+
+}
+ ```
+&emsp;&emsp;这里使用闭锁，是因为我们想让主线程能同时启动所有工作线程，并且让主线程等待最后一个线程执行完成，而不是顺序地等待每个线程执行完成。
+
+### 5.5.2 FutureTask
+&emsp;&emsp;`FutureTask`也可以用做闭锁。(FutureTask实现了*Future*语义，表示一种抽象的可生成结果的计算[CPJ 4.3.3])。FutureTask 表示计算是通过Callable来实现的，相当于一种可生成结果的Runnable，并且可以处于以下3中状态：等待运行(Waiting to run)，正在运行(Running)和运行完成(Completed)。“执行完成”表示计算的所有可能结束方式，包括正常结束、由于取消而结束和由于异常而结束等。当FutureTask进入完成状态后，它会永远停止在这个状态上。
+&emsp;&emsp;`Future.get`的行为取决于任务的状态。如果状态已经完成，那么get会立即返回结果，否则get将阻塞直到任务进入完成状态，然后返回结果或者抛出异常。FutureTask将计算结果从执行计算的线程传递到获取这个结果的线程，而FutureTask的规范确保了这种传递过程能实现结果的安全发布。
+&emsp;&emsp;FutureTask在Executor框架中表示异步任务，此外还可以用来表示一些时间较长的计算，这些计算可以在使用计算结果之前启动。下面程序清中的就使用了FutureTask来执行一个高开销的计算，并且计算结果将在稍后使用。通过提前启动计算，可以减少在等待结果时需要的时间。
+ ```java
+ public class PreCalculate {
+
+    private final FutureTask<Long> futureTask = new FutureTask<Long>(new Callable<Long>() {
+        @Override
+        public Long call() throws Exception {
+            Thread.sleep(3 * 1000);
+            return new Random().nextLong();
+        }
+    });
+
+    private final Thread thread = new Thread(futureTask);
+
+    public void start(){thread.start();}
+
+    public Long get() throws ExecutionException, InterruptedException {
+        return futureTask.get();
+    }
+
+    public static void main(String[] args) throws Exception{
+        PreCalculate preCalculate = new PreCalculate();
+        preCalculate.start();
+        long start = System.currentTimeMillis();
+        System.out.println(preCalculate.get());
+        long end = System.currentTimeMillis();
+        System.out.println(end - start);
+    }
+
+}
+ ```
+&emsp;&emsp;上面代码创建了一个FutureTask，其中包含主要就是模拟一个耗时比较常的计算，以及一个执行这个运算的线程。由于在构造函数或静态初始化方法中启动线程中并不是一个好方法，因此提供了一个start方法来启动线程。当程序随后需要计算结果时，可以调用get方法，如果数据已经计算成功，那么将返回这些数据，否则将等待计算完成后再返回。
+&emsp;&emsp;`Callable`表示的任务可以抛出受检查的或未受检查的异常，并且任何代码都可能抛出一个Error。无论任务代码抛出什么异常，都会被封装到一个`ExecutionException`,并在 Future.get 中被重新熬出。这将时调用get的代码变的复杂，因为它不仅需要处理可能出现的 ExcutionException (以及未检查的CancellationException)，而且还由于ExecutionException是作为一个 Throwable类返回的，因此处理起来并不容易。
+&emsp;&emsp;在上面代码中，当get方法抛出 ExecutionException 时，可能是以下三种情况之一：Callable 抛出的受检查异常，RuntimeExcetpion，以及 Error。我们必须对美中情况进行单独处理。
+
+### 5.5.3 信号量
+&emsp;&emsp;计数信号量(Counting Semaphore)用来控制同时访问某个特定资源的操作数量，或者同时执行某个操作的数量。计数信号量还可以用来实现某种资源池，或者对容器施加边界。
+&emsp;&emsp;Semaphore 中管理者一组虚拟的许可(permit),许可的出事数量可通过构造函数来指定。在执行操作时可以首先获得许可(只要还有剩余许可)，并在使用以后释放许可。如果没有许可，那么 acquire 将阻塞直到有许可(或者直到被中断或者操作超时)。release方法将返回一个许可给信号量。计算信号量是一种简化形式的二值信号量，即出事值为1的Semaphore。二值信号量可以做互斥体(mutex)，并具备不可重入的加锁语义：谁拥有这个唯一许可，谁就拥有互斥锁。
+
+
