--- a/Java/Concurrent/Party 1/5、基础构建模块.md
+++ b/Java/Concurrent/Party 1/5、基础构建模块.md
@@ -18,6 +18,7 @@
     - [5.5.1 闭锁](#551-闭锁)
     - [5.5.2 FutureTask](#552-futuretask)
     - [5.5.3 信号量](#553-信号量)
+    - [5.5.4 栅栏](#554-栅栏)
 
 <!-- /code_chunk_output -->
 
@@ -148,5 +149,72 @@
 ### 5.5.3 信号量
 &emsp;&emsp;计数信号量(Counting Semaphore)用来控制同时访问某个特定资源的操作数量，或者同时执行某个操作的数量。计数信号量还可以用来实现某种资源池，或者对容器施加边界。
 &emsp;&emsp;Semaphore 中管理者一组虚拟的许可(permit),许可的出事数量可通过构造函数来指定。在执行操作时可以首先获得许可(只要还有剩余许可)，并在使用以后释放许可。如果没有许可，那么 acquire 将阻塞直到有许可(或者直到被中断或者操作超时)。release方法将返回一个许可给信号量。计算信号量是一种简化形式的二值信号量，即出事值为1的Semaphore。二值信号量可以做互斥体(mutex)，并具备不可重入的加锁语义：谁拥有这个唯一许可，谁就拥有互斥锁。
+&emsp;&emsp;Semaphore可以用于实现资源池，例如数据库连接池。我们可以构造一个固定长度的资源池，当池为空时，请求资源将会失败，但你真正希望看到的行为是阻塞而不是失败，并且当池费控时解除阻塞。如果将Semaphore的计数值初始化为池的大小，并且从池中获取一个资源之前首先调用acquire方法获取一个许可，在将资源返回给池之后调用release释放许可，那么acquire将一直阻塞直到资源池不为空。
+&emsp;&emsp;同样，你也可以使用Semaphore将任何一种容器变成有界阻塞容器，如下面的示例代码。信号量的计数值为容器容量的最大值。add操作在向底层容器添加一个元素前，首先要获取一个许可。乳沟添加没成功，则会立刻释放许可。同样，remove 操作释放一个许可，使更多的容器能够添加到容器中。底层的set并不知道边界的任何信息，这是由BoundedHashSet来处理。
+ ```java
+ public class BoundedHashSet<T> {
 
+    private final Set<T> set;
+
+    private final Semaphore sem;
+
+    public BoundedHashSet(int bound){
+        this.set = Collections.synchronizedSet(new HashSet<T>(bound));
+        this.sem = new Semaphore(bound);
+    }
+
+    public boolean add(T o) throws InterruptedException {
+        sem.acquire();
+        boolean wasAdded = false;
+        try{
+            wasAdded = set.add(o);
+            return wasAdded;
+        }finally {
+            if(!wasAdded){
+                sem.release();
+            }
+        }
+    }
+
+    public boolean remove(T o){
+        boolean wasRemove = set.remove(o);
+        if(wasRemove){
+            sem.release();
+        }
+        return wasRemove;
+    }
+
+    @Override
+    public String toString(){
+        return this.set.toString() + "\n" +this.sem.getQueueLength();
+    }
+
+    public static void main(String[] args) throws InterruptedException {
+        BoundedHashSet boundedHashSet = new BoundedHashSet<String>(10);
+        new Thread(()->{
+            for(int i = 0; i < 20; i++){
+                try {
+                    System.out.println("添加："+i + " " + boundedHashSet.add(i+""));
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+            System.out.println(boundedHashSet.toString());
+        }).start();
+        Thread.sleep(1000 * 3);
+        new Thread(()->{
+            for(int i = 0; i < 10; i++){
+                System.out.println("移除："+i + " " + boundedHashSet.remove(i+""));
+            }
+        }).start();
+    }
+}
+ ```
+
+### 5.5.4 栅栏
+&emsp;&emsp;我们已经看到通过闭锁来启动一组相关的操作，或者等待一组相关操作结束。闭锁是一次性对象，一旦进入终止状态，就不能重置。
+&emsp;&emsp;栅栏(Barrier)类似于闭锁，它能阻塞一组线程直到某个时间发生[CPJ 4,4.3]。**栅栏与闭锁的关键区别在于，所有线程必须同时到达栅栏位置，才能继续执行**。闭锁用于等待事件，而栅栏用于等待其他线程。栅栏用于实现一些协议，例如几个家庭决定在某个地方集合：“所有人6：00在麦当劳碰头，到了以后要等其他人，之后再讨论下一步要做得事情”。
+&emsp;&emsp;`CyclicBarrier`可以使一定数量的参与方反复地在栅栏位置汇集，它在并行迭代算法中非常有用：这种算法通常将一个问题拆分成一系列互相独立的子问题。当线程到达栅栏位置时调用await方法，这个方法将阻塞直到所有线程都到达栅栏位置。如果所有线程都到达栅栏位置，那么栅栏将打开，此时所有线程都被释放，而栅栏将被重置以便下次使用。如果对await的调用超时时，或者await阻塞的线程被中断，那么栅栏就被认为是打破了，所有阻塞的await调用都将终止并抛出BrokenBarrierException。如果成功通过栅栏，那么await将为每个线程返回一个唯一的到达索引号，我们可以利用这些索引来“选举”一个领导线程，并在下一次迭代中由该领导索引执行一些特殊的工作。CyclicBarrier还可以使你将一个栅栏操作传递给构造函数，这个是一个Runnable，当成功通过栅栏时会(在一个子线程中)执行它，但在阻塞线程被释放之前是不能执行的。
+&emsp;&emsp;另一种形式的栅栏时Exchanger,它是一种两行(Two-Party)栅栏，各方的栅栏位置上交换数据[CPJ 3.4.3]。当两方执行不对称的操作时，Exchanger会非常有用，例如当一个线程想缓冲区写入数据，而另一个线程从缓冲区中读取数据。这些线程可以使用Exchanger来汇合，并将满的缓冲区与空的缓冲区交换。当两个线程通过Exchanger交换对象时，这种交换就把这两个对象安全地发布给另一方。
+&emsp;&emsp;数据交换的时机取决于应用程序的响应需求。最简单的方案是，当缓冲区被填满时，由填充任务进行交换，当缓冲区为空时，由清空任务进行交换。这样会把需要交换的次数降至最低，但如果新数据的到达率不可预测，那么一些数据的处理过程就将延迟。另一个方法是，不仅当缓冲被填满时进行交换，并且当缓冲被填充到一定程度并保持一定时间后，也进行交换。
 
