--- a/Java/Concurrent/Party 2/1、线程中执行任务.md
+++ b/Java/Concurrent/Party 2/1、线程中执行任务.md
@@ -1,4 +1,25 @@
 # 6 线程中执行任务
+
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [6 线程中执行任务](#6-线程中执行任务)
+  - [6.1 串行地执行任务](#61-串行地执行任务)
+  - [6.1.2 显示地为任务创建线程](#612-显示地为任务创建线程)
+  - [6.1.3 无限制创建线程的不足](#613-无限制创建线程的不足)
+  - [6.2 Executor 框架](#62-executor-框架)
+    - [6.2.1 示例：基于 Executor 的 Web 服务器](#621-示例基于-executor-的-web-服务器)
+    - [6.2.2 执行策略](#622-执行策略)
+    - [6.2.3 线程池](#623-线程池)
+    - [6.2.4 Executor 的生命周期](#624-executor-的生命周期)
+    - [6.2.5 延迟任务与周期任务](#625-延迟任务与周期任务)
+  - [6.3 找出可利用的并行特性](#63-找出可利用的并行特性)
+    - [6.3.2 携带结果的任务Callable与Future](#632-携带结果的任务callable与future)
+    - [6.3.3 在异构任务并行化中的局限性](#633-在异构任务并行化中的局限性)
+
+<!-- /code_chunk_output -->
+
 ## 6.1 串行地执行任务
 &emsp;&emsp;在应用程序中可以通过多种策略来调度任务，而其中一个策略能够更好地利用潜在的并发性。最简单的策略就是在单个线程中串行的执行各项任务。
 ## 6.1.2 显示地为任务创建线程
@@ -80,3 +101,142 @@
 * **newSingleThreadExecutor** 是一个单线程的Executor，它创建单个工作者线程来执行任务，如果这个线程异常结束，会创建另外一个线程来代替。newSingleThreadExecutor能够确保一早任务在队列中的书序来执行(例如FIFO、LIFO、优先级)。
 * **newScheduledThreadPool** 创建一个固定长度的线程池，而且以延迟或定时任务的方式来执行任务，类似于TImer。
 * **newFixedThreadPool**和**newCachedThreadPool**这两个工厂方法返回通用的ThreadPoolExecutor实例，这些实例可以直接用来构造专门用途的executor。
+  
+### 6.2.4 Executor 的生命周期
+&emsp;&emsp;我们已经知道如何创建一个Executor，但并没有讨论如何关闭它。Executor的实现通常会创建线程来执行任务。但JVM只有在所有(非守护)线程全部终止后才会退出。因此，如果无法正确的关闭Executor，那么JVM将无法结束。
+&emsp;&emsp;由于Executor以异步方式来执行任务，因此在任何时刻，之前提交任务的状态不是立即可见的。有些任务可能已经完成，有些任务正在运行，而其他的任务可能在队列中等待执行。既然Executor是为应用程序提供服务的，因而它们也是可关闭的(无论采用平缓的方式还是粗暴的方式)，并将在关闭操作中受影响的任务的状态反馈给应用程序。
+&emsp;&emsp;为了解决执行服务的生命周期问题，Executor扩展了ExecutorService接口，添加了一些用于生命管理的方法（同时还有一些用于任务提交的便利方法）。`ExecutorService` 中的生命周期管理方法。
+ ```java
+ public interface ExecutorService extends Executor {
+     /**
+     * 方法将执行平缓的关闭过程：不再接受新的任务，同时等待已经提交的任务执行完成——包括* 哪些还未开始执行的任务
+     */
+    void shutdown();
+
+     /**
+     * 尝试取消所有运行中的任务，并且不再启动队列中尚未开始执行的任务
+     */
+    List<Runnable> shutdownNow();
+
+     /**
+     * 是否已经关闭
+     */
+    boolean isShutdown();
+
+    boolean isTerminated();
+
+    boolean awaitTermination(long timeout, TimeUnit unit)
+        throws InterruptedException;
+
+    //下面是用于任务提交的便利方法。
+    <T> Future<T> submit(Callable<T> task);
+
+    <T> Future<T> submit(Runnable task, T result);
+
+    Future<?> submit(Runnable task);
+
+    <T> List<Future<T>> invokeAll(Collection<? extends Callable<T>> tasks)
+        throws InterruptedException;
+
+    <T> List<Future<T>> invokeAll(Collection<? extends Callable<T>> tasks,
+                                  long timeout, TimeUnit unit)
+        throws InterruptedException;
+
+    <T> T invokeAny(Collection<? extends Callable<T>> tasks)
+        throws InterruptedException, ExecutionException;
+
+    <T> T invokeAny(Collection<? extends Callable<T>> tasks,
+                    long timeout, TimeUnit unit)
+        throws InterruptedException, ExecutionException, TimeoutException;
+ ```
+&emsp;&emsp;ExecutorService的生命周期有3中状态：运行、关闭和已终止。ExecutorService在初始创建时处于运行状态。shutdown 方法将执行平缓的关闭过程：不再接受新的任务，同时等待已经提交的任务执行完成——包括哪些还未开始执行的任务。shutdownNow方法将执行粗暴的关闭过程：尝试取消所有运行中的任务，并且不再启动队列中尚未开始执行的任务。
+&emsp;&emsp;ExecutorService关闭后提交的任务将由“拒绝执行处理器(Rejected Execution Handler)”来处理，它会抛弃任务，或者使得execute方法抛出一个未检查的RejectedExecutionException。等所有任务都完成后，ExecutorService将转入终止状态。可以调用awaitTermination来等待ExecutorService到达终止状态，或者通过调用isTerminated来轮训ExecutorService是否已经终止。通常在调用awaitTermination之后会立即调用shutdown，从而产生同步地关闭ExecutorService的效果。
+&emsp;&emsp;下面代码清单通过声明周期来支持扩展Web服务器的功能。可以通过两种方法来关闭Web服务器：在程序中调用stop，或者以客户端请求形式向Web服务器发送一个特定格式的HTTP请求。
+ ```java
+ public class LifecycleWebServer {
+    private static final int NTHREADS = 100;
+    private static final ExecutorService exec = Executors.newFixedThreadPool(NTHREADS);
+
+    public void start() throws IOException {
+        ServerSocket socket = new ServerSocket(80);
+        while(true){
+            try{
+                final Socket connection = socket.accept();
+                exec.execute(()->{
+                    handleRequest(connection);
+                });
+            }catch (RejectedExecutionException e){
+                if(!exec.isShutdown()){
+                    System.out.println("task submission rejected");
+                    e.printStackTrace();
+                }
+            }
+
+        }
+    }
+
+    public void stop(){exec.shutdown();}
+
+
+
+    private void handleRequest(Socket connection){
+        //按照特定协议如果出现请求关闭则调用stop
+        //if(){stop();}
+        return;
+    }
+}
+ ```
+### 6.2.5 延迟任务与周期任务
+&emsp;&emsp;Timer 类负责管理延迟任务("在100ms后执行该任务")以及周期任务(“每100ms执行一次该任务”)。然而，Timer存在一些缺陷，因此应该考虑使用ScheduledThreadPoolExecutor来代替它。可以通过ScheduledThreadPoolExecutor的构造函数或newScheduledThreadPool工厂方法来创建该类的对象。
+&emsp;&emsp;Timer 在执行所有定时任务时只会创建一个线程。如果某个任务的执行时间过程，那么将破坏其他TimerTask的定时精准性。例如某个周期TimerTask需要每10ms执行一次，而另一个TimerTask需要执行40ms，那么这个周期任务或者在40ms任务执行完成后快速连续地调用4尺，或者彻底“丢失”4尺调用(取决于它是基于固定速率来调度还是基于固定延时来调用)。线程池能弥补这个缺陷，它可以提供多个线程来执行延时任务和周期任务。
+&emsp;&emsp;Timer的另一个问题是，如果TimerTask抛出一个未检查的异常，那么Timer将表现出糟糕的行为。Timer线程并不捕获异常，因此当TimerTask抛出未检查的异常时将终止定时线程。已经被调度但尚未执行的TimerTask将不会再执行，新的任务也不能被调度。(这个问题称之为“*线程泄露[Thread Leakage]*”)。因此在Java 5.0或更高JDK中，将很少使用Timer。
+
+## 6.3 找出可利用的并行特性
+&emsp;&emsp;Executor框架帮助指定执行策略，但如果要使用Executor，必须将任务表描述为一个Runnable。在大多数服务器应用程序中都存在一个明显的任务边界：单个客户请求。但有时候，任务边界并非显而易见的，例如在很多桌面应用程序中。即是是服务器应用程序，在单个客户请求中仍可能存在可发掘的并发性，例如数据库服务器。（[CPJ 4.4.1.1]了解在选择任务边界时的各种权衡因素及相关讨论。）
+
+### 6.3.2 携带结果的任务Callable与Future
+&emsp;&emsp;Executor框架使用Runnable作为其基本的任务表现形式。Runnable 是一种有很大局限性的抽象，虽然run能写入到日志文件或者将结果放入某个共享的数据结构，但它不能返回一个值或抛出一个受检查的异常。  
+
+&emsp;&emsp;许多任务实际上都是存在延迟计算——执行数据库查询，从网络上获取资源，或者计算某个复杂的功能。对于这些任务，Callable是一种更好的抽象：它认为主入口点(即call)将返回一个值，并可能抛出一个异常。在Executor中包含了一些辅助方法能将其他类型的任务封装为一个Callable，例如 Runnable 和 java.security.PrivilegedAction。  
+
+&emsp;&emsp;Runnable 和 Callable 描述的都是抽象的计算任务。这些任务通常是有范围的，即都有一个明确的起始点，并且最终会结束。Executor执行的任务有4个生命周期阶段：创建、提交、开始和完成。由于有些任务可能要执行很长的事件，因此通常希望能够取消这些任务。在Executor框架中，已提交但尚未开始的任务可以取消，但对于那些已经开始执行的任务，只有当他们能响应中断时，才能取消。取消一个已经完成的任务不会有任何影响。  
+
+&emsp;&emsp;Future表示一个任务的声明周期，并提供了响应的方法来判断是否已经完成或取消，以及获取任务的结果和取消任务等。在Future规范中包含的隐含意思是，任务的声明周期只能前进，不能后退，就像ExecutorService的声明周期一样。当某个任务完成后，它就永远停留在“完成”状态上。
+&emsp;&emsp;get方法的行为取决于任务的状态（尚未开始、正在运行、已完成）。如果任务已经完成，那个get会立即返回或抛出一个Exception，如果任务没有完成，那么get将阻塞并直到任务完成。如果任务抛出异常，那么get将该异常封装为ExecutionException并重新抛出。如果任务被取消，那么get将抛出CancellationException。如果get抛出ExecutionException，那么可以通过getCause来获得被封装的初始异常。
+ ```java
+@FunctionalInterface
+public interface Callable<V> {
+    /**
+     * Computes a result, or throws an exception if unable to do so.
+     *
+     * @return computed result
+     * @throws Exception if unable to compute a result
+     */
+    V call() throws Exception;
+}
+ ```
+ ```java
+ public interface Future<V> {
+     boolean cancel(boolean mayInterruptIfRunning);
+     boolean isCancelled();
+     boolean isDone();
+     V get() throws InterruptedException, ExecutionException;
+     V get(long timeout, TimeUnit unit)
+        throws InterruptedException, ExecutionException, TimeoutException;
+ }
+ ```
+&emsp;&emsp;可以通过许多中方法创建一个Future来描述任务。ExecutorService中的所有submit方法都将返回Future，从而将一个Runnable或Callable提交Executor，并得到一个Future用来获得任务执行结果或者取消任务。还可以显示地为某个指定的Runnable或Callable实例化一个FutureTask。（由于FutureTask实现了Runnable，因此可以将它提交给Executor来执行，或者字节调用它的run方法。）
+&emsp;&emsp;从Java 6开始，ExecutorService实现可以改写AbstractExecutorService中的newTaskFor方法，从而根据已提交的Runnable或Callable来控制Future的实例化过程。在默认实现中仅创建了一个新的FutureTask。
+> ThreadPoolExecutor 中 newTaskFor 的默认实现
+ ```java
+     protected <T> RunnableFuture<T> newTaskFor(Callable<T> callable) {
+        return new FutureTask<T>(callable);
+    }
+ ```
+&emsp;&emsp;在将Runnable或Callable提交到Executor的过程中，包含一个安全发布过程，即将Runnable或Callable从提交线程发布到最终执行任务的线程。类似地，在设置Future结果的过程中也包含了一个安全发布，即将这个结果从计算它的线程发布到任何通过get获得它的线程。
+
+### 6.3.3 在异构任务并行化中的局限性
+&emsp;&emsp;通过对异构任务进行并行化来获得重大的性能提升是很困难的。
+&emsp;&emsp;如果没有在相识的任务之间找出细粒度的并行性，那么这种方法带来的好处将减少。因为要减不同类型的任务分配给不同的线程并不容易，在线程增加时，如何确保他们能帮忙而不是妨碍其他线程的工作。
+&emsp;&emsp;在多个线程之间分配异构的任务时，还有一个问题就是任务的大小可能完全不同。如果将两个任务A和B分配给两个线程，但是A任务执行的时间是B执行的10倍，那么整个过程也只能加速9%。最后，当多个线程之间分解任务时，还需要一定的任务协调开销：为了使任务分解能够提高性能，这种开销不能高于并行性实现的提升。
+&emsp;&emsp;只有当大量互相独立且同构的任务可以并发进行处理时，才能体现出将程序的工作负载分配到多个任务中带来的真正性能提升。
