--- a/Java/Concurrent/Party 2/6、线程中执行任务.md
+++ b/Java/Concurrent/Party 2/6、线程中执行任务.md
@@ -15,8 +15,14 @@
     - [6.2.4 Executor 的生命周期](#624-executor-的生命周期)
     - [6.2.5 延迟任务与周期任务](#625-延迟任务与周期任务)
   - [6.3 找出可利用的并行特性](#63-找出可利用的并行特性)
+      - [6.3.1 示例：串行的页面渲染器](#631-示例串行的页面渲染器)
     - [6.3.2 携带结果的任务Callable与Future](#632-携带结果的任务callable与future)
-    - [6.3.3 在异构任务并行化中的局限性](#633-在异构任务并行化中的局限性)
+    - [6.3.3 示例：使用Future实现页面渲染](#633-示例使用future实现页面渲染)
+    - [6.3.4 在异构任务并行化中的局限性](#634-在异构任务并行化中的局限性)
+    - [6.3.5 CompletionService Executor 与 BlockingQueue](#635-completionservice-executor-与-blockingqueue)
+    - [6.3.6 示例：使用 CompletionService 实现页面渲染器](#636-示例使用-completionservice-实现页面渲染器)
+    - [6.3.7 为任务设置](#637-为任务设置)
+  - [小结](#小结)
 
 <!-- /code_chunk_output -->
 
@@ -194,6 +200,19 @@
 ## 6.3 找出可利用的并行特性
 &emsp;&emsp;Executor框架帮助指定执行策略，但如果要使用Executor，必须将任务表描述为一个Runnable。在大多数服务器应用程序中都存在一个明显的任务边界：单个客户请求。但有时候，任务边界并非显而易见的，例如在很多桌面应用程序中。即是是服务器应用程序，在单个客户请求中仍可能存在可发掘的并发性，例如数据库服务器。（[CPJ 4.4.1.1]了解在选择任务边界时的各种权衡因素及相关讨论。）
 
+#### 6.3.1 示例：串行的页面渲染器
+&emsp;&emsp;对简单的方法对HTML文档进行串行处理。例如：文件标签和图片。
+ ```java
+ public class SingleThreadReader{
+    void readerPage(CharSequence source){
+        readText(source);
+        for(ImageInfo imageInfo : scanForImageInfo(source)){
+            readImage(imageInfo.downLoadImage());
+        }
+    }
+}
+ ```
+
 ### 6.3.2 携带结果的任务Callable与Future
 &emsp;&emsp;Executor框架使用Runnable作为其基本的任务表现形式。Runnable 是一种有很大局限性的抽象，虽然run能写入到日志文件或者将结果放入某个共享的数据结构，但它不能返回一个值或抛出一个受检查的异常。  
 
@@ -235,8 +254,79 @@ public interface Callable<V> {
  ```
 &emsp;&emsp;在将Runnable或Callable提交到Executor的过程中，包含一个安全发布过程，即将Runnable或Callable从提交线程发布到最终执行任务的线程。类似地，在设置Future结果的过程中也包含了一个安全发布，即将这个结果从计算它的线程发布到任何通过get获得它的线程。
 
-### 6.3.3 在异构任务并行化中的局限性
+### 6.3.3 示例：使用Future实现页面渲染
+&emsp;&emsp;为了使页面渲染实现更高的并发性能，将渲染过程分解为两个任务，一个是文本，一个图像。
+ ```java
+ public class FutureReader {
+    private final ExecutorService executor = Executors.newCachedThreadPool();
+    
+    void readerPage(CharSequence source){
+        final List<ImageInfo> imageInfos = scanForImageInfo(source);
+        Callable<List<ImageData>> task =
+                ()-> imageInfos.stream().map(i -> i.downLoadImage()).collect(Collectors.toList());
+        Future<List<ImageData>> future = executor.submit(task);
+        readText(source);
+        List<ImageData> imageDataList = null;
+        try {
+            imageDataList = future.get();
+            for(ImageData imageData : imageDataList){
+                readImage(imageData);
+            }
+        } catch (InterruptedException e) {
+            //重新设置线程的中断状态
+            Thread.currentThread().interrupt();
+        } catch (ExecutionException e) {
+            e.printStackTrace();
+        }
+    }
+}
+ ```
+
+### 6.3.4 在异构任务并行化中的局限性
 &emsp;&emsp;通过对异构任务进行并行化来获得重大的性能提升是很困难的。
 &emsp;&emsp;如果没有在相识的任务之间找出细粒度的并行性，那么这种方法带来的好处将减少。因为要减不同类型的任务分配给不同的线程并不容易，在线程增加时，如何确保他们能帮忙而不是妨碍其他线程的工作。
 &emsp;&emsp;在多个线程之间分配异构的任务时，还有一个问题就是任务的大小可能完全不同。如果将两个任务A和B分配给两个线程，但是A任务执行的时间是B执行的10倍，那么整个过程也只能加速9%。最后，当多个线程之间分解任务时，还需要一定的任务协调开销：为了使任务分解能够提高性能，这种开销不能高于并行性实现的提升。
 &emsp;&emsp;只有当大量互相独立且同构的任务可以并发进行处理时，才能体现出将程序的工作负载分配到多个任务中带来的真正性能提升。
+
+### 6.3.5 CompletionService Executor 与 BlockingQueue
+&emsp;&emsp;如果向Executor提交一组计算任务，并且希望在计算完成后获得结果，那么可以保存与某个任务关联的Future，然后反复使用get方法，同时将参数timeout指定为0，从而通过轮训来判断任务是否完成。这种方法虽然可行，但却有些繁琐。幸运的是，还有一种更好的方法：完成服务(CompletionService)。
+&emsp;&emsp;CompletionService 将 Executor 和 BlockingQueue 的功能融合在一起。你可以将Callable任务提交给它来执行，然后使用类似于队列操作的 take 和 pool 等方法来获得已完成的结果，而这些结果会在完成时将别封装为 Future。 ExecutorCompletionService 实现了 CompletionService，并将计算部分委托给一个Executor。
+&emsp;&emsp;ExecutorCompletionService 的实现非常简单。在构造函数中创建一个BlockingQueue来保存计算完成的结果。当计算完成时，调用 Future-Task中的done方法。当提交某个任务时，该任务将首先包装一个QueueingFuture，这是FutureTask的一个子类，然后再改写子类的done方法，并将结果放入BlockingQueue中。take 和 poll 方法委托给了BlockingQueue，这些方法会在得出结果之前阻塞。
+
+### 6.3.6 示例：使用 CompletionService 实现页面渲染器
+&emsp;&emsp;可以通过CompletionService从两方面来提高页面渲染器的性能：缩短中运行时间以及提高响应性。
+ ```java
+ public class CompletionServiceReader extends Reader {
+    private final Executor executor;
+    public CompletionServiceReader(Executor executor){
+        this.executor = executor;
+    }
+    void readerPage(CharSequence source){
+        List<ImageInfo> infos = scanForImageInfo(source);
+        CompletionService<ImageData> completionService = new ExecutorCompletionService<>(executor);
+        for(final ImageInfo imageInfo : infos){
+            completionService.submit(()->imageInfo.downLoadImage());
+        }
+        readText(source);
+        try {
+            for(int i = 0; i < infos.size(); i++){
+                Future<ImageData> future = completionService.take();
+                ImageData imageData = future.get();
+                readImage(imageData);
+            }
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        } catch (ExecutionException e) {
+            e.printStackTrace();
+        }
+    }
+}
+ ```
+
+### 6.3.7 为任务设置
+&emsp;&emsp;有时候，如果某个任务无法在指定时间内完成，那么将不再需要它的结果，此时可以放弃这些任务。例如,某个Web应用程序从外部的服务器上获取广告信息，但如果该程序在两秒钟内得不到响应，那么将显示一个默认的广告，这样即使不能获取广告信息，也不会降低站点的响应性能。类似地，一个门户网站可以从多个数据源并行的获取数据，但可能只会在指定的时间内等待数据，如果超出了等待事件，那么只显示已经获得的数据。
+&emsp;&emsp;在有限事件内执行任务的主要困难在于，要确保得到答案的事件不能超过限定的时间，或者在限定的时间内无法获得答案。在指定时间限制的Future.get中支持这种需求：当结果可用时，它立即返回，如果在指定时间内没有计算出结果，那么将抛出 TimeoutException。
+&emsp;&emsp;在使用限时任务时需要最，当这些任务超时后应该立即停止，从而避免为继续计算一个不使用的结果而浪费计算资源。要实现这个功能，可以由任务本身来管理它的限时事件，并且在超时后终止执行或取消任务。此时可以再使用Future，如果一个限时的get方法抛出了TimeoutException，那么可以通过Future来取消任务。如果编写的任务是可取消的，那么可以提前中止它，以避免消耗过多的资源。如下例子：
+
+## 小结
+&emsp;&emsp;通过围绕任务执行来设计应用程序，可以简化开发工程，并有助于实现并发。Executor框架将任务提交与执行策略解耦开来，同时还支持多种不同类型的执行策略。当需要创建线程来处理任务时，可以考虑使用Executor。要想在将应用程序分解为不同的任务时获得最大的好处，必须定义清晰的任务边界。某些应用程序中存在着比较明显的任务边界，而在其他一些程序中则需要进一步分析才能揭示粒度更细的并行性。
