--- a/Java/Concurrent/Party 2/6、线程中执行任务.md
+++ b/Java/Concurrent/Party 2/6、线程中执行任务.md
@@ -105,7 +105,7 @@
 * **newFixedThreadPool** 将创建一个固定长度的线程池，每当提交一个任务时就创建一个线程，直到达到线程池的最大数量，这时线程池的规模将不再变化(如果某个线程发生了未预期的Exception而结束，那么线程池会补充一个新的线程)。
 * **newCachedThreadPool** 将创建一个可缓存的线程池，如果线程池的当前规模超过了处理需求时，那么将回收空闲的线程，而当需求增加时，则可以添加新的线程，线程池的规模不存在任何限制。
 * **newSingleThreadExecutor** 是一个单线程的Executor，它创建单个工作者线程来执行任务，如果这个线程异常结束，会创建另外一个线程来代替。newSingleThreadExecutor能够确保一早任务在队列中的书序来执行(例如FIFO、LIFO、优先级)。
-* **newScheduledThreadPool** 创建一个固定长度的线程池，而且以延迟或定时任务的方式来执行任务，类似于TImer。
+* **newScheduledThreadPool** 创建一个固定长度的线程池，而且以延迟或定时任务的方式来执行任务，类似于Timer。
 * **newFixedThreadPool**和**newCachedThreadPool**这两个工厂方法返回通用的ThreadPoolExecutor实例，这些实例可以直接用来构造专门用途的executor。
   
 ### 6.2.4 Executor 的生命周期
@@ -200,7 +200,7 @@
 ## 6.3 找出可利用的并行特性
 &emsp;&emsp;Executor框架帮助指定执行策略，但如果要使用Executor，必须将任务表描述为一个Runnable。在大多数服务器应用程序中都存在一个明显的任务边界：单个客户请求。但有时候，任务边界并非显而易见的，例如在很多桌面应用程序中。即是是服务器应用程序，在单个客户请求中仍可能存在可发掘的并发性，例如数据库服务器。（[CPJ 4.4.1.1]了解在选择任务边界时的各种权衡因素及相关讨论。）
 
-#### 6.3.1 示例：串行的页面渲染器
+### 6.3.1 示例：串行的页面渲染器
 &emsp;&emsp;对简单的方法对HTML文档进行串行处理。例如：文件标签和图片。
  ```java
  public class SingleThreadReader{
