--- a/Java/Concurrent/Party 2/7、取消与关闭.md
+++ b/Java/Concurrent/Party 2/7、取消与关闭.md
@@ -6,16 +6,23 @@
 - [7 取消与关闭](#7-取消与关闭)
   - [7.1 任务取消](#71-任务取消)
     - [7.1.1 中断](#711-中断)
+    - [7.1.2 中断策略](#712-中断策略)
+    - [7.1.3 响应中断](#713-响应中断)
+    - [7.1.5 通过future来实现取消](#715-通过future来实现取消)
+    - [7.1.6 处理不可中断阻塞](#716-处理不可中断阻塞)
+    - [7.1.7 采用 newTaskFor 来封装非标准的取消](#717-采用-newtaskfor-来封装非标准的取消)
+  - [7.2 停止基于线程的服务](#72-停止基于线程的服务)
+    - [7.2.1 示例：日志服务](#721-示例日志服务)
 
 <!-- /code_chunk_output -->
 
-&emsp;&emsp;任务和线程的启动很容易。在大多数是否，我们都会让它们运行直到结束，或者让它们执行停止。然而有时候我们希望提前结束任务或者线程，或许是用户取消了操作，或者应用程序需要被快速关闭。
-&emsp;&emsp;要使任务和线程能安全、快速、可靠地停止下来，并不是一件容易的事。Java没有提供任何机制来安全地终止线程。(虽然Thread.stop和suspend等方法提供了这样的机制，但由于存在一些严重取消，因此应该避免使用)。但它提供了中断(Interruption)，这是一种协作机制，能够使一个线程终止另一个线程的当前工作。
+&emsp;&emsp;任务和线程的启动很容易。在大多数时候，我们都会让它们运行直到结束，或者让它们执行停止。然而有时候我们希望提前结束任务或者线程，或许是用户取消了操作，或者应用程序需要被快速关闭。
+&emsp;&emsp;要使任务和线程能安全、快速、可靠地停止下来，并不是一件容易的事。Java没有提供任何机制来安全地终止线程。(虽然Thread.stop和suspend等方法提供了这样的机制，但由于存在一些严重缺陷，因此应该避免使用)。但它提供了中断(Interruption)，这是一种协作机制，能够使一个线程终止另一个线程的当前工作。
 &emsp;&emsp;这种协作式的方法是必要的，我们很少希望某个任务、线程或服务立即停止，因为这种立即停止会使共享的数据结构处于不一致的状态。相反，在编写任务和服务时可以使用一种协作的方式：当需要停止时，它们首先会清除当前正在执行的工作，然后再结束。这提供了更好的灵活性，因为任务本身的代码比发出取消请求的代码更清楚如何执行清除工作。
-&emsp;&emsp;生命周期结束(End-of-Lifecycle)的问题会使任务、服务已经程序的设计和实现等过程变得复杂，而这个程序设计中非常重要的要素却经常被忽略。一个在行为良好的软件与勉强运行的软件之间的最主要区别就是，行为良好的软件能很完善地处理失败、关闭和取消等过程。
+&emsp;&emsp;生命周期结束(End-of-Lifecycle)的问题会使任务、服务以及程序的设计和实现等过程变得复杂，而这个程序设计中非常重要的要素却经常被忽略。一个在行为良好的软件与勉强运行的软件之间的最主要区别就是，行为良好的软件能很完善地处理失败、关闭和取消等过程。
 
 ## 7.1 任务取消
-&emsp;&emsp;如果外部代码能在某个某个操作正常完成之前将其置入“完成”状态，那么这个操作就可以称为可取消的(Cancellable)。取消某个操作的原因很多：
+&emsp;&emsp;如果外部代码能在某个操作正常完成之前将其置入“完成”状态，那么这个操作就可以称为可取消的(Cancellable)。取消某个操作的原因很多：
 * **用户请求取消** 用户点击取消按钮；
 * **有时间限制的操作** 例如：应用程序需要在有限的事件内完成任务。当计数器超时时，需要取消所有正在搜索的任务。
 * **应用程序事件** 例如：应用程序对某个问题空间进行分解并搜索。当其中一个任务找到解决方案时，所有其他任然在搜索的任务都将被取消。
@@ -60,12 +67,12 @@
     }
 }
  ```
-&emsp;&emsp;一个可取消的任务必须拥有取消策略(Cancellation Policy)，在这个策略中将详细地定义取消操作的“How”、“When”以及“What”，即其他代码如何(How)请求取消该任务，任务在何时(When)检查是否已经请求了取消，以及在响应取消请求时应该自行哪些(What)操作。
-&emsp;&emsp;考虑线程世界中停止支付(Stop-Payment)支票的示例。银行通常都会规定如何提交一个停止支付的请求，在处理这些请求时需要做哪些响应性保证，已经当支付终端后需要遵循哪些流程(例如通知该事务中涉及的其他银行，以及对付款人的账户进行费用评估)。这些流程和保证放在一起就构成了支票支付的取消策略。
+&emsp;&emsp;一个可取消的任务必须拥有取消策略(Cancellation Policy)，在这个策略中将详细地定义取消操作的“How”、“When”以及“What”，即其他代码如何(How)请求取消该任务，任务在何时(When)检查是否已经请求了取消，以及在响应取消请求时应该执行哪些(What)操作。
+&emsp;&emsp;考虑现实世界中停止支付(Stop-Payment)支票的示例。银行通常都会规定如何提交一个停止支付的请求，在处理这些请求时需要做哪些响应性保证，已经当支付终端后需要遵循哪些流程(例如通知该事务中涉及的其他银行，以及对付款人的账户进行费用评估)。这些流程和保证放在一起就构成了支票支付的取消策略。
 
 ### 7.1.1 中断
 &emsp;&emsp;上述的例子中取消机制最终会使得搜索素数的任务退出，但在退出过程中需要花费一定的事件。然而，如果使用这种方法的任务调用了一个阻塞方法，例如BlockingQueue.put，那么可能会产生一个更严重的问题——任务可能永远不会检查取消标志，因此永远不会结束。
-&emsp;&emsp;看下一个例子。生产者线程生成素数，并将它们放入一个阻塞队列。如果生产者的速度超过了消费者的处理速度，队列将被填满，put方法也会阻塞。当生产者在put方法中阻塞时，如果消费者希望生产者任务，那么将发生什么情况？它可以调用cancel方法来设置cancelled标志，但此时生产者却永远不能检查这个标志，因为它无法从阻塞的put方法中恢复过来(因为消费者此时已经停止从队列中取素数，所以put方法将一直保持阻塞状态)。
+&emsp;&emsp;看下一个例子 BrokerPrimeProducer。生产者线程生成素数，并将它们放入一个阻塞队列。如果生产者的速度超过了消费者的处理速度，队列将被填满，put方法也会阻塞。当生产者在put方法中阻塞时，如果消费者希望生产者任务取消，那么将发生什么情况？它可以调用cancel方法来设置cancelled标志，但此时生产者却永远不能检查这个标志，因为它无法从阻塞的put方法中恢复过来(因为消费者此时已经停止从队列中取素数，所以put方法将一直保持阻塞状态)。
  ```java
  public class BrokerPrimeProducer extends Thread{
 
@@ -124,4 +131,343 @@
  ```
 &emsp;&emsp;在一些特殊的阻塞库的方法支持中断。线程中断是一种协作机制，线程可以通过这种机制来通知另一个线程，告诉它在适合的或者可能的情况下停止当前工作，并转而执行其他的工作。
 > 在Java的API或者语言规范中，并没有将中断与任何取消语义关联起来，但实际上，如果在取消之外的其他操作中使用中断，那么都是不合适的，并且很难支撑起更大的应用。
+
 &emsp;&emsp;每个线程都有一个boolen类型的中断状态。当中断线程时，这个线程的中断状态将被置为true。在Thread中包含了中断线程以及查询线程中断状态的方法。interrupt方法能中断目标线程，而isInterrupted方法能够返回目标线程的中断状态。静态的interrupted方法将清除当前线程的中断状态，并返回它之前的值，这也是清除中断状态的唯一方法。
+
+> Thread 中的 中断方法
+ ```java
+ public class Thread {
+      public void interrupt() {
+        if (this != Thread.currentThread())
+            checkAccess();
+
+        synchronized (blockerLock) {
+            Interruptible b = blocker;
+            if (b != null) {
+                interrupt0();           // Just to set the interrupt flag
+                b.interrupt(this);
+                return;
+            }
+        }
+        interrupt0();
+    }
+    public boolean isInterrupted() {
+        return isInterrupted(false);
+    }
+    public static boolean interrupted() {
+        return currentThread().isInterrupted(true);
+    }
+ }
+ ```
+&emsp;&emsp;阻塞库方法，例如 Thread.sleep 和 Object.wait 等，都会检查线程何时中断，并且在发现中断提前返回。它们在响应中断时执行的操作包括：清除中断状态，抛出 InterruptedException，表示阻塞操作由于中断而提前结束。JVM并不能保证阻塞方法检测到中断的速度，但在实际情况中响应速度还是非常快的。
+&emsp;&emsp;当线程在非阻塞情况下中断，它的中断状态将被设置，然后根据被取消的操作来检查中断状态已判断发生了中断。通过这样的方法，中断操作将变得“有黏性”——如果不触发InterruptedException，那么中断状态将一直保持，直到明确地清楚中断状态。
+>调用 interrupt 并不意味则立即停止目标线程正在进行的工作，而只是传递请求中断的消息。
+
+&emsp;&emsp;对中断操作的正确理解是：它并不会真正地中断一个正在运行的线程，而只是发出中断请求，然后由线程在下一个合适的时候中断自己。(这些时刻也被称为取消点)。有些方法，例如 wait、sleep 和 join 等，将严格的处理这种请求，当它们收到中断请求或者在开始执行时发现某个已被设置好的中断状态时，将抛出一个异常。设计良好的方法可以完全忽略这种请求，只要它们能够使调用代码对中断请求进行某种特殊处理。设计糟糕的方法可能会屏蔽中断请求，从而导致调用栈中的其他代码无法对中断请求作出响应。
+&emsp;&emsp;在使用静态的interrupted时应该小心，因为它会清除当前线程的中断状态如果在调用interrupted时返回true,那么除非你想屏蔽这个中断，否则必须对它进行处理——可以抛出interruptedException，或者通过再次调用interrupt来恢复中断状态。
+&emsp;&emsp;之前的示例代码BrokerPrimeProducer 说明了一些自定义的取消机制无法与可阻塞的库函数实现良好交付的原因。如果任务代码能够响应中断，那么可以使用中断作为取消机制，并利用许多库类中提供的中断支持。
+> 通常，中断是实现取消的最合适方式。
+
+&emsp;&emsp;BrokerPrimeProducer 中的问题很容易解决(和简化):使用中断而不是boolean标志来请求取消。在每次迭代循环中，有两个位置可以检测出中断：在阻塞的put方法调用中，以及在循环开始处查询中断状态。由于调用了阻塞的put方法，因此这里并不一定需要进行显示的检测，但执行检测却会对中断具有更高的响应性，因为它是在启动寻找素数任务之前检查中断的，而不是在任务完成之后。如果可以中断的阻塞方法的调用频率并不高，不足以获得足够的响应性，那么显示的检测中断状态能起到一定的帮助作用。
+ ```java
+ public class PrimeProducer extends Thread {
+    private final BlockingQueue<BigInteger> queue;
+    public PrimeProducer(BlockingQueue<BigInteger> queue){
+        this.queue = queue;
+    }
+    @Override
+    public void run(){
+        try {
+            BigInteger p = BigInteger.ONE;
+            while(!Thread.currentThread().isInterrupted()){
+                queue.put(p = p.nextProbablePrime());
+            }
+        } catch (InterruptedException e) {
+            /** 允许线程退出 **/
+            System.out.println("线程结束");
+        }
+    }
+    public void cancel(){
+        interrupt();
+    }
+}
+ ```
+### 7.1.2 中断策略
+&emsp;&emsp;正如任务中应该包含取消策略一样，线程同样应该包含中断策略。中断策略规定线程如何解释某个中断请求——当发现中断请求时，应该做哪些工作(如果需要的话)，哪些工作单元对于中断来说是原子操作，以及以多快的速度来响应中断。
+&emsp;&emsp;最合理的中断策略时某种形容的线程级(Thread-Level)取消操作或服务级(Service-Level)取消操作：尽快退出，在必要时进行清理，通知某个所有者线程已经退出。此外还可以建立其他的中断策略，例如暂停服务或重新开始服务，但对于那些包含非标准中断策略的线程或线程池，只能用于能知道这些策略的任务中。
+&emsp;&emsp;区分任务和线程对中断的反应是很重要的。一个中断请求可以有一个或多个接收者——中断线程池总的某个工作者线程，同时意味着”取消当前任务“和"关闭工作者线程"。
+&emsp;&emsp;任务不会在其自己拥有的线程中执行，而是在某个服务(例如线程池)拥有的线程中执行。对于非线程所有者的代码来说(例如，对于线程池而言，任何在线程池实现以外的代码)，应该小心地保存中断状态，这样拥有的线程的代码才能对中断做出响应，即使"非所有者"代码也可以做出响应。(当你为一户人家打扫房屋时，即使主人不再，也不应该把这段时间内收到的邮件扔掉，而应该把邮件收起来，等主人回来以后再交给他们处理，尽管你可以阅读他们的杂志)。
+&emsp;&emsp;这就是为什么大多数阻塞的库函数都只抛出InterruptedException作为中断响应。它们永远不会在某个由自己拥有的线程中运行，因此它们为任务或库代码实现了最合理的取消策略：尽快推出执行流程，并把中断信息传递给调用者，从而使调用栈中的上层代码可以采取进一步的操作。
+&emsp;&emsp;当检查到中断请求时，任务并不需要放弃所有的操作——它可以推迟中断请求，并直到某个更合适的时刻。因此需要记住中断请求，并在完成当前任务后抛出InterruptedException或者表示已经收到中断请求。这项技术能够确保在更新过程中发生中断时，数据结构不会被破坏。
+&emsp;&emsp;任务不应该对执行该任务的线程的中断策略做出任何假设，除非该任务被专门设计为服务中运行，并且在这些服务中包含特定的中断策略。无论任务把中断视为取消，还是其他某个中断响应操作，都应该小心地保存执行线程的中断状态。如果除了InterruptedException传递给调用者外还需要执行其他操作，那么应该捕获InterruptedException之后恢复中断状态：
+ ```java
+ Thread.currentThread().isInterrupted()
+ ```
+&emsp;&emsp;正如任务代码不应该对其执行所在的线程的中断策略做出假设，执行取消操作的代码也不应该对线程的中断策略做出假设。线程应该只能由其所有者中断，所有者可以将线程的中断策略信息封装到某个适合的取消机制中，例如关闭(shutdown)方法。
+>由于每个线程拥有各自的中断策略，因此除非你知道中断该线程的含义，否则就不应该中断这个线程。
+
+### 7.1.3 响应中断
+&emsp;&emsp;当调用可中断的阻塞函数时，例如 Threadd.sleep 或者 BlockingQueue.put 等，有两种策略处理 InterruptedException：
+* 传递异常(可能在执行某个特定于任务的清楚操作之后)，从而使你的方法也可称为可中断的阻塞方法。
+* 恢复中断状态，从而使调用栈中的上层代码能够对其进行处理。
+&emsp;&emsp;传递InterruptedException与将InterruptedException添加到throws子语句中一样容易，如下所示:
+ ```java
+ BlockingQueue<Task> queue;
+ ...
+ public Task getNextTask() throws InterruptedException {
+     return queue.take();
+ }
+ ```
+&emsp;&emsp;如果不想或无法传递InterruptedException(或许通过Runnable来定义任务)，那么需要寻找另一种方式来保存中断请求。一种标准的方法就是通过再次调用interrupted来恢复中断状态。你不能屏蔽InterruptedException，例如在catch块中补货到异常却不做任何处理，除非在你的代码中实现了线程的中断策略。虽然PrimeProducer屏蔽了中断，但这是因为它已经知道线程将要结束，因此在调用栈中已经没有上层代码需要知道中断信息。由于大多数代码并不知道它们将在哪个线程中运行，因此应该保存中断状态。
+> 只有实现了线程中断策略的代码才可以屏蔽中断请求。在常规的任务和库代码中都不应该屏蔽中断请求。
+
+&emsp;&emsp;对于一些不支持取消但仍可以调用可中断阻塞方法的操作，它们必须在循环中调用这些方法，并在发现中断后重新尝试。在这种情况下，它们应该在本地保存中断状态，并在返回前恢复状态而不是在捕获InterruptedException时恢复状态，如下代码，如果过早地设置中断状态，就可以引起无限循环，因为大多数可中断的阻塞方法都会在入口处检查中断状态，并且当发现该状态已被设置时会立即抛出InterruptedException。(通常，可中断的方法会在阻塞或进行重要的工作前首先检查中断，从而尽快的响应中断)。
+
+&emsp;&emsp;如果代码不会调用可中断的阻塞方法，那么仍然可以通过在代码任务中轮训当前线程的中断状态来相应中断。要选择合适的轮训频率，就需要在效率和响应性之间进行权衡。如果响应性要求较高，那么不应该调用哪些执行时间长并且不响应中断的方法，从而对可调用的库代码进行一些限制。
+&emsp;&emsp;在取消过程中可能设计除了中断状态之外的其他状态。中断可以用来获得线程的注意，并且由中断线程保存的信息，可以为中断的线程提供进一步的指示。(当访问这些信息时，要确保使用同步。)
+&emsp;&emsp;例如，当一个由ThreadPoolExecutor拥有的工作者线程检测到中断时，它会检查线程池是否正在关闭。如果是，它会在结束之前执行一些线程池清理工作，否则它可能创建一个新线程将线程池恢复到合理的规模。
+
+### 7.1.5 通过future来实现取消
+&emsp;&emsp;我们已经使用了一种抽象机制来管理任务的生命周期，以及异常，以及实现取消，即Future。通常，使用现有库中的类比执行编写更好，因此我们将继续使用Future和任务执行框架。
+&emsp;&emsp;ExecutorService.submit 将返回一个Future来描述任务。Future拥有一个cancel方法，该方法带有一个boolean类型的参数mayInterruptIfRunning，表示取消操作是否成功。(这只是表示任务是否能够接收中断，而不是表示任务是否能检测并处理中断。)如果mayInterruptRunning为true并且任务当前正在某个线程中运行，那么这个线程能被中断。如果这个参数为false，那么意味着“若任务还没启动，就不要运行它”，这种方式应该用于哪些不处理中断的任务中。
+&emsp;&emsp;除非你清楚线程的中断策略，否则就不要中断线程，那么在什么情况下调用cancel可以将参数指定为true?执行任务的线程是由标准的Executor创建的，它实现了一种中断策略使得任务可以通过中断被取消，所以如果任务在标准Executor中运行，并通过它们的Future来取消任务，那么可以设置mayInterruptIfRunning。当尝试取消某个任务时，不宜直接中断线程池，因为你并不知道当中断请求到达时正在运行什么任务——只能通过任务的Future来实现取消。这也是在编写任务时要将中断视为一个取消请求的另一个你有：可以通过任务的Future来取消它们。
+
+### 7.1.6 处理不可中断阻塞
+&emsp;&emsp;在Java库中，许多可阻塞的方法都是通过提前返回或者抛出InterruptedException来响应中断请求的，从而使开发人员更容易构建出能响应取消请求的任务。然而并非所有的可阻塞方法或者阻塞机制都能响应中断：如果一个线程由于执行通过的Socket I/O或者等待获得内置锁而阻塞，那么中断请求只能设置线程的中断状态，除此之外没有任务其他作用。对于那些执行不可中断操作而被阻塞的线程，可以使用类似于中断的手段来停止这些线程，但这要求我们必须知道线程阻塞的原因。
+&emsp;&emsp;Java.io包中的同步Socket I/O。在服务器应用程序中，最常见的阻塞I/O形式就是对套接字进行读取和写入。虽然InputStream和OutputStream中的read和write等方法都不会响应中断，但通过关闭底层的套接字，可以使得由于执行read或write等方法而被阻塞的线程抛出一个SocketException。
+&emsp;&emsp;Java.io包中的同步I/O。当中断一个正在InterruptibleChannel上等待的线程时，将抛出ClosedByInterruptException并关闭链路(这还会使得其他在这条链路上阻塞的线程同样抛出ClosedByInterruptException)。当关闭一个InterruptibleChannel时，将导致所有在链路上的操作上阻塞的线程都抛出AsynchronousCloseException。大多数标准的Channel都实现了InterruptibleChannel。
+&emsp;&emsp;Selector的异步I/O。如果一个线程在调用Selector.select方法(在java.nio.channels中)时阻塞了，那么调用close或wakeup方法会使线程抛出CLosedSelectorException并提前返回。
+&emsp;&emsp;获取某个锁。如果一个线程由于等待某个内置锁而阻塞，那么将无法响应中断，因为线程认为它肯定会获得锁，所以将不会理会中断请求。但是，在Lock类中提供了lockInterruptibly方法，该方法允许在等待一个锁的同时仍然能响应中断。
+
+### 7.1.7 采用 newTaskFor 来封装非标准的取消
+&emsp;&emsp;我们可以通过 newTaskFor 方法来进一步优化 ReaderThread 中封装非标准取消的计数，这是 Java 76 在ThreadPoolExecutor中新增功能。当一个Callable提交给ExecutorService时，submit方法会返回一个Future，我们可以通过这个Future来取消任务。newTaskFor是一个工厂方法，它将创建Future来代表任务。newTaskFor还能返回一个RunnableFuture接口，该接口扩展了Future和Runnable(并由FutureTask实现)。
+&emsp;&emsp;通过定制表示任务的Future可以改变Future.cancel的行为。例如，定制的取消代码可以实现日志记录和手机取消操作的统计信息，以及取消一些不响应中断的操作。通过改写interrupt方法，ReaderThread可以取消基于套接字的线程。同样，通过改写任务Future.cancel方法也可以实现类似的功能。
+
+## 7.2 停止基于线程的服务
+&emsp;&emsp;应用程序通常会创建拥有多个线程的服务，例如线程池，并且这些服务的生命周期通常比创建它们的方法的生命周期更长。如果应用程序准备退出，那么这些服务说拥有的线程页需要结束。由于无法通过抢占式的方法来停止线程，因此它们需要执行结束。
+&emsp;&emsp;正确的封装原则是：除非拥有某个线程，否则不能对该线程进行操控。例如，中断线程或者修改线程的优先级等。在线程API中，并没有对线程所有权给出正式的定义：线程由Thread对象表示，并且像其他对象一样可以被只有共享。然而，线程有一个相应的所有者，即创建该线程的类。因此线程池是其工作者线程的所有者，如果要中断这些线程，那么应该使用线程池。
+&emsp;&emsp;与其他封装对象一样，线程的所有权是不可传递的：应用程序可以拥有服务，服务也可以拥有工作者线程，但应用程序并不能拥有工作者线程，因此应用程序不能直接停止工作者线程。相反，服务应用提供声明周期方法(Lifecycle Method)来关闭它自己以及它所拥有的线程。这样，当应用程序关闭该服务时，服务就可以关闭所有的线程了。在ExecutorService中提供了shutdown和shutdownNow等方法。同样，在其他拥有线程的服务中也应该提供类似的关闭机制。
+> &emsp;&emsp;对于持有线程的服务，只要服务的存在事件大于创建线程的方法的存在事件，那么久应该提供声明周期方法。
+
+### 7.2.1 示例：日志服务
+&emsp;&emsp;在LogWriter中给出了一个简单的日志服务示例，其中日志操作在单独的日志线程中执行。产生日志消息的线程并不会将消息直接写入输出流，而是由LogWriter通过BlockingQueue将消息提交给日志线程，并由日志线程写入。这是一种多生产者单消费者(Multipe-Producer,Single-Consumer)的设计方式：每个调用log的操作都相当于一个生产者，而后台的日志线程则相当于消费者。
+ ```java
+ public class LogWriter {
+
+    private final BlockingQueue queue;
+    private final LoggerThread logger;
+
+    public LogWriter(PrintWriter writer){
+        this.queue = new LinkedBlockingDeque(100);
+        logger = new LoggerThread(writer);
+    }
+
+    public void start(){
+        logger.start();
+    }
+
+    public void log(String msg) throws InterruptedException{
+        queue.put(msg);
+    }
+
+    private class LoggerThread extends Thread{
+        private final PrintWriter writer;
+        public LoggerThread(PrintWriter writer){
+            this.writer = writer;
+        }
+
+        @Override
+        public void run(){
+            try{
+                while(true){
+                    writer.println(queue.take());
+                }
+            } catch (InterruptedException e) {
+            }finally {
+                writer.close();
+            }
+        }
+    }
+}
+ ```
+&emsp;&emsp;为了使像LogWriter这样的服务在软件产品中发挥实际的作用，还需要实现一种终止日志线程的方法，从而避免使JVM无法正常关闭。要停止日志线程时很容易的，因为它会反复调用take，而take能响应中断。如果将日志线程修改为当捕获到InterruptedException时推出，那么只需要中断日志线程就能停止服务。
+&emsp;&emsp;然而，如果只是使日志线程退出，那么嗨不是一种完备的关闭机制。这种直接关闭的做法会丢失那些正在等待被写入的日志的信息，不仅如此，其他线程将调用log时被阻塞，因为日志消息队列是慢的，因此这些线程将无法解除阻塞状态。当取消一个生产者-消费者操作时，需要同时取消生产者和消费者。在中断日志线程时会处理消费者，但在这里示例中，由于生产者并不是专门的线程，因此要取消它们将非常困难。
+&emsp;&emsp;另外一种关闭LogWriter的方法是：设置某个“已请求关闭”标志，已避免进一步提交日志消息，如下代码。在收单关闭请求后，消费者会把队列中的所有消息写入日志，并解除所有在调用log时阻塞的生产者。然而，在这个方法中存在着竞态条件问题，使得该方法并不可靠。log的实现是一种“先判断再运行”的代码序列：生藏着发现该服务还没有关闭，因此在关闭服务后仍然会将日志消息放入队列，这同样会使得生产者可能在调用log时阻塞并且无法解除阻塞状态。可以通过一些技巧来降低这种情况的发生概率(例如，在宣布队列被清空钱，让消费者等待数秒钟)，但这些都没有解决问题的本质，即使很小的概率也可能导致程序发生故障。
+ ```java
+ //通过一种不可靠的方式为日志服务增加关闭支持
+ public void log(String msg) throws InterruptedException{
+     if(!shutdownRequested){
+         queue.put(msg);
+     }else{
+         throw new IllegalStateException("logger is shut down");
+     }
+ }
+ ```
+&emsp;&emsp;为LogWriter提供可靠关闭操作的方法是解决竞态条件问题，因为要使用日志消息的提交操作成为原子操作。然而，我们不希望在消息加入队列时去持有一个说，因为put方法本身就可以阻塞。我们采用的方法是：通过原子方法来检查关闭请求，并且由条件地递增一个计数器来“保持”提交消息的权利。如下：
+ ```java
+ public class LoggerService {
+    private final BlockingQueue<String> queue;
+    private final LoggerThread loggerThread;
+    private boolean isShutdown;
+    private int reservations;
+    public LoggerService(PrintWriter writer){
+        queue = new LinkedBlockingDeque(100);
+        loggerThread = new LoggerThread(writer);
+    }
+
+    public void start(){
+        loggerThread.start();
+    }
+
+    public void stop(){
+        synchronized (this){
+            isShutdown = true;
+        }
+        loggerThread.interrupt();
+    }
+
+    public void log(String msg) throws InterruptedException{
+        synchronized (this){
+            if(isShutdown){
+                throw new IllegalStateException("logger is shutdown");
+            }
+            reservations++;
+        }
+        queue.put(msg);
+    }
+
+    private class LoggerThread extends Thread{
+        private final PrintWriter writer;
+        public LoggerThread(PrintWriter writer){
+            this.writer = writer;
+        }
+
+        @Override
+        public void run(){
+            try{
+                while(true){
+                    try{
+                        synchronized (LoggerService.this) {
+                            if(isShutdown && reservations == 0) {
+                                break;
+                            }
+                        }
+                        String msg = queue.take();
+                        synchronized (LoggerService.this){
+                            reservations--;
+                        }
+                        writer.println(msg);
+                    }catch (InterruptedException e){};
+                }
+            } finally {
+                writer.close();
+            }
+        }
+    }
+}
+ ```
+
+### 7.2.2 关闭ExecutorService
+&emsp;&emsp;我们已经知道ExecutorService提供了两种关闭方法：使用shutdown正常关闭，以及使用shutdownNow强制关闭。在进行强制关闭时，shutdownNow首先关闭正在执行的任务，然后返回所有尚未启动的任务清单。
+&emsp;&emsp;则两种关闭的差别在于各自的安全性和响应性：强行关闭的速度更快，但风险也更大，因为任务很可能在执行到一半时被结束；而正常关闭虽然速度慢，但却更安全，因为ExecutorService会一直等到队列中的所有任务都执行完成后才关闭。在其他拥有线程的服务中也应该考虑提供类似的关闭方式以供选择。
+&emsp;&emsp;简单的程序可以直接在main函数中启动和关闭全局的ExecutorService。而在复杂承租中，通常会将ExecutorService封装到某个更高级别的服务中，并且该服务能提供其终极的声明周期方法。
+
+### 7.2.3 “毒丸”对象
+&emsp;&emsp;另一种关闭生产者——消费者服务的方式就是使用“毒丸(Posion Pill)”对象：“毒丸”是指一个放在队列上的对象，其含义是：“当得到这个对象时，立即停止。”在FIFO(先进先出)队列中，“毒丸”对象将确保消费者在关闭之前首先完成队列中的所有对象，在提交"毒丸"对象之前提交的所有工作都会被处理，而生产者在提交了“毒丸”对象后，将不会再提交任务工作。在下面的程序清单中，给出了一个单生产者——单消费者的桌面搜索实例，这个示例使用了“毒丸”对象来关闭服务。
+ ```java
+ public class IndexingService {
+    private static final File POISON = new File("");
+    private final BlockingQueue<File> queue;
+    private final File root;
+
+    public IndexingService(File root, BlockingQueue<File> queue){
+        this.root = root;
+        this.queue = queue;
+    }
+
+    private CrawlerThread producer = new CrawlerThread();
+    private IndexerThread consumer = new IndexerThread();
+
+    public void start(){
+        producer.start();
+        consumer.start();
+    }
+
+    public void stop(){
+        producer.interrupt();
+    }
+
+    public void awaitTermination() throws InterruptedException{
+        consumer.join();
+    }
+
+    class CrawlerThread extends Thread {
+        public void run() {
+            try {
+                crawl(root);
+            } catch (InterruptedException e) {
+            } finally {
+                while (true) {
+                    try {
+                        queue.put(POISON);
+                    }catch (InterruptedException e){
+                        //重试
+                    }
+                }
+            }
+        }
+        private void crawl(File root) throws InterruptedException {
+        }
+    }
+    class IndexerThread extends Thread {
+        @Override
+        public void run(){
+            try{
+                while(true){
+                    File file = queue.take();
+                    if(file == POISON){
+                        break;
+                    }else{
+                        indexFile(file);
+                    }
+                }
+            } catch (InterruptedException e) {
+            }
+        }
+        private void indexFile(File file){}
+    }
+}
+ ```
+&emsp;&emsp;只有在生产者和消费者数量都已知的情况下，才可以使用“毒丸”对象。在Indexing-Service中采用的解决方案可以扩展到多个生产者：只需每个生产者都想队列中行一个“毒丸”对象，并且消费者仅当接收到N个producers个“毒丸”对象时才停止。这种方法可以扩展到多个消费者的情况，只需生藏着将N个“毒丸”对象放入队列。然而当生产者和消费者数量较大时，这种方法将变得难以使用。只有在无界队列中，“毒丸”对象才能可靠地工作。
+
+### 7.2.4 只执行一次的服务
+&emsp;&emsp;如果某个方法需要处理一批任务，并且当所有任务都处理完成后才返回，那么可以通过一个私有的Executor来简化服务的生命周期管理，其中Executor的生命周期是由这个方法来控制的。（在这种情况下，invokeAll和invokeAny等方法通常会起较大的作用。）
+
+### 7.2.5 shutdownNow的局限性
+&emsp;&emsp;当通过shutdownNow来强行关闭ExecutorService时，它会尝试取消正在执行的任务，并返回所有已提交但尚未开始的任务，从而将这些任务写入日志或保存起来以便之后进行处理。
+&emsp;&emsp;然而，我们无法通过常规方法来找出那些任务已经开始但尚未结束。这意味着我们无法在关闭过程中知道正在执行中的任务状态，除非任务本身会执行某种检查。要知道哪些任务还没有完成，你不仅需要知道哪些任务还没开始，而且还需要知道当Executor关闭时哪些任务正在执行。
+
+### 7.3 处理非正常的线程终止
+&emsp;&emsp;当单线程的控制台程序由于发生了一个未捕获的异常终止时，程序将停止运行，并产生与程序正常输出非常不同的栈追踪信息，这种情况是很容易理解的。然而，如果并发程序中的某个线程发生故障，那么通常不会如此明显。在控制台中可能会输出栈追踪信息，但没有人会观察控制台。此外，当线程发生故障时，应用程序可能看起来任然在工作，所以这个失败很可能会被忽略。幸运的是，我们可以检测并防止在程序中“遗漏”线程的方法。
+&emsp;&emsp;导致线程提前死亡的主要原因就是RuntimeException。由于这些异常表现出了某种变成错误或者其他不可修复的错误，因此它们通常不会被捕获。它们不会在调用栈中逐层传递，而是默认地在控制台中输出栈追踪信息，并终止线程。
+&emsp;&emsp;任何代码都可能抛出一个RuntimeException。每当调用另一个方法时，都要对它的行为保持怀疑，不要盲目地认为它一定会正常返回，或者一定会抛出在方法圆形中声明的某个已检查异常。对调用的代码越不熟悉就越应该对其代码行为保持怀疑。这些应该在try-catch代码块中调用这些任务，这样就能捕获那些未检查的异常了，或者可以使用try-finally代码块来确保框架能够知道线程非正常退出的情况，并作出正确的响应。
+**未捕获异常的处理**
+&emsp;&emsp;在Thread Api中同样提供了UncaugthExceptionHandler，它能检测出某个线程由于未获取的异常而终结的情况。这两种方法是互补的，通过将二者结合在一起，就能有效地防止线程泄露问题。
+&emsp;&emsp;当一个线程未能捕获异常而退出时，JVM会把这个时间报告给应用程序提供的UncaughtExceptionHandler异常处理器。如果没有提供任何异常处理器，那么默认的行为是将栈追踪信息输出到System.err。
+> Thread 中的 UncaughtExceptionHandler 接口
+ ```java
+  @FunctionalInterface
+    public interface UncaughtExceptionHandler {
+        /**
+         * Method invoked when the given thread terminates due to the
+         * given uncaught exception.
+         * <p>Any exception thrown by this method will be ignored by the
+         * Java Virtual Machine.
+         * @param t the thread
+         * @param e the exception
+         */
+        void uncaughtException(Thread t, Throwable e);
+    }
+ ```
+&emsp;&emsp;异常处理器如何处理未捕获异常，取决于对服务质量的需求。最常见的响应方式是将一个错误信息以及相关的栈跟踪信息写入应用程序日志中。异常处理器还可以采取更直接的响应，例如尝试重新启动，关闭应用程序，或者执行其他修复或诊断等操作。
+
