--- a/Java/Concurrent/Party 1/5、基础构建模块.md
+++ b/Java/Concurrent/Party 1/5、基础构建模块.md
@@ -148,9 +148,9 @@
 
 ### 5.5.3 信号量
 &emsp;&emsp;计数信号量(Counting Semaphore)用来控制同时访问某个特定资源的操作数量，或者同时执行某个操作的数量。计数信号量还可以用来实现某种资源池，或者对容器施加边界。
-&emsp;&emsp;Semaphore 中管理者一组虚拟的许可(permit),许可的出事数量可通过构造函数来指定。在执行操作时可以首先获得许可(只要还有剩余许可)，并在使用以后释放许可。如果没有许可，那么 acquire 将阻塞直到有许可(或者直到被中断或者操作超时)。release方法将返回一个许可给信号量。计算信号量是一种简化形式的二值信号量，即出事值为1的Semaphore。二值信号量可以做互斥体(mutex)，并具备不可重入的加锁语义：谁拥有这个唯一许可，谁就拥有互斥锁。
-&emsp;&emsp;Semaphore可以用于实现资源池，例如数据库连接池。我们可以构造一个固定长度的资源池，当池为空时，请求资源将会失败，但你真正希望看到的行为是阻塞而不是失败，并且当池费控时解除阻塞。如果将Semaphore的计数值初始化为池的大小，并且从池中获取一个资源之前首先调用acquire方法获取一个许可，在将资源返回给池之后调用release释放许可，那么acquire将一直阻塞直到资源池不为空。
-&emsp;&emsp;同样，你也可以使用Semaphore将任何一种容器变成有界阻塞容器，如下面的示例代码。信号量的计数值为容器容量的最大值。add操作在向底层容器添加一个元素前，首先要获取一个许可。乳沟添加没成功，则会立刻释放许可。同样，remove 操作释放一个许可，使更多的容器能够添加到容器中。底层的set并不知道边界的任何信息，这是由BoundedHashSet来处理。
+&emsp;&emsp;Semaphore 中管理者一组虚拟的许可(permit),许可的初始数量可通过构造函数来指定。在执行操作时可以首先获得许可(只要还有剩余许可)，并在使用以后释放许可。如果没有许可，那么 acquire 将阻塞直到有许可(或者直到被中断或者操作超时)。release方法将返回一个许可给信号量。计算信号量是一种简化形式的二值信号量，即出事值为1的Semaphore。二值信号量可以做互斥体(mutex)，并具备不可重入的加锁语义：谁拥有这个唯一许可，谁就拥有互斥锁。
+&emsp;&emsp;Semaphore可以用于实现资源池，例如数据库连接池。我们可以构造一个固定长度的资源池，当池为空时，请求资源将会失败，但你真正希望看到的行为是阻塞而不是失败，并且当池非空时解除阻塞。如果将Semaphore的计数值初始化为池的大小，并且从池中获取一个资源之前首先调用acquire方法获取一个许可，在将资源返回给池之后调用release释放许可，那么acquire将一直阻塞直到资源池不为空。
+&emsp;&emsp;同样，你也可以使用Semaphore将任何一种容器变成有界阻塞容器，如下面的示例代码。信号量的计数值为容器容量的最大值。add操作在向底层容器添加一个元素前，首先要获取一个许可。如果添加没成功，则会立刻释放许可。同样，remove 操作释放一个许可，使更多的容器能够添加到容器中。底层的set并不知道边界的任何信息，这是由BoundedHashSet来处理。
  ```java
  public class BoundedHashSet<T> {
 
