--- a/Java/Concurrent/Party 2/8、线程池的使用.md
+++ b/Java/Concurrent/Party 2/8、线程池的使用.md
@@ -44,4 +44,173 @@
 &emsp;&emsp;在提交的任务的速率超过线程池的处理速率时，那么任然会耗尽资源。
 ThreadPoolExecutor允许提供一个BlockingQueue来保存等待执行的任务。基本的任务排队方法由3中：无界队列、有界队列和同步移交(Synchronous Handoof)。队列的选择与其他配置参数有关，例如线程池的大小等。
 &emsp;&emsp;newFixedThreadPool 和 newSingleThreadExecutor 在默认情况下使用一个无界的LinkedBlockingQueue。如果所有工作者线程都处于忙碌，那么任务将在队列中等候。如果任务持续快速地到达，并且超过了线程池处理它们的速度，那么队列将无限制地增加。
-&emsp;&emsp;一种更稳妥的资源管理策略时使用有界队列，例如ArrayBlockingQueue、有界的LinkedBlockingQueue、PriorityBlockingQueue。
+&emsp;&emsp;一种更稳妥的资源管理策略时使用有界队列，例如ArrayBlockingQueue、有界的LinkedBlockingQueue、PriorityBlockingQueue。在使用有界队列时，队列大小与线程池大小必须一起调节。
+&emsp;&emsp;对于非常大的或者无界的线程池，可以通过泗洪SynchronousQueue来避免任务排队，以及直接将任务从生产者移交给工作者线程。SynchronousQueue不是一个真正的队列，而是一种在线程之间进行移交的机制。要将一个元素放入SynchronousQueue中，必须有一另外一个线程正在等待接受这个元素。如果没有线程正在等待，并且线程池的当前大小小于最大值，那么THreadPoolExecutor将创建一个新的线程，否则根据饱和策略，这个任务将被拒绝。使用直接移交将根高效，因为任务会直接移交给执行它的线程，而不是被首先放入队列中，然后由工作者线程从队列中提取该任务。只有当线程池是无界的或者可以拒绝任务时，SynchronousQueue才有实际价值。在newCachedThreadPool工厂方法中就使用了SynchronousQueue。
+&emsp;&emsp;当使用像LinkedBlockingQueue或者ArrayBlockingQueue这样的FIFO(先进先出)队列时，任务的执行顺序与它们的到达顺序相同。如果想进一步控制任务执行顺序，还可以使用PriorityBlockingQueue，这个队列将根据优先级来安排任务。任务的优先级是通过自然顺序或Comparator(如果任务实现了Comparable)来定义的。
+> &emsp;&emsp;对于Executor,newCachedThreadPool工厂方法是一种很好的默认选择，它能提供比固定大小的线程池更好的排队性能。当需要限制当前任务的数量以及满足资源管理需求时，那么可以选择固定大小的线程池，就像在接受网络客户请求的服务应用程序中，如果不进行限制，那么很容易发生过载问题。
+&emsp;&emsp;只有当任务互相独立时，为线程池或工作队列设置界限才是合理的。如果任务之间存在依赖性，那么在有界的线程池或队列就可能导致线程“饥饿“死锁问题。此时应该使用无界的线程池，如newCachedThreadPool。
+
+### 8.3.3 饱和策略
+&emsp;&emsp;当有界队列被填满后，饱和策略开始发挥作用。ThreadPoolExecutor的饱和策略可以通过调用setRejectedExecutionHandler来修改。(如果某个任务被提交到一个已被关闭的Executor时，也会用到饱和策略)JDK提供了几种不通的RejectedExecutionHandler实现，每中实现都包含有不通的饱和策略：AbortPolicy、CallerRunsPolicy、DiscardPolicy和OldestPolicy。
+&emsp;&emsp;"中止(Abort)"策略是默认的饱和策略，该策略将跑出未检查RejectedExecutionException。调用者可以补货这个异常，然后根据需求编写自己的处理代码。当新提交的任务无法保存到队列中等待执行时，“抛弃(Discard)”策略会悄悄抛弃该任务。”抛弃最旧的(Discard-Oldest)“策略这会抛弃下一个将被执行的任务，然后尝试重新提交新的任务。(如果工作队列是一个优先队列，那么"抛弃最旧的"策略将导致抛弃优先级最高的任务，因此最好不要将“抛弃最旧的”饱和策略和优先级队列放在一起使用。)
+&emsp;&emsp;"调用者运行(Caller-Runs)"策略实现了一种调节机制，该策略既不会抛弃任务，也不会跑出异常，而是将某些任务回退到调用者，从而降低新任务的流量。它不会在线程池的某个线程中执行新提交的任务，而是在一个调用了execute的线程中执行该任务。
+&emsp;&emsp;当创建Executor时，可以选择饱和策略或者对执行策略进行修改。如下清淡给出了如何创建一个固定大小的线程池，同时使用“调用者运行”饱和策略。
+ ```java
+ThreadPoolExecutor executor = new ThreadPoolExecutor(N_THREADS,N_THREADS,0L,TimeUnit.MILLISECONDS,new LinkedBlockingQueue<Runnable>(CAPACITY));
+executor.setRejectedExecutionHandler(new ThreadPoolExecutor.CallerRunsPolicy());
+ ```
+&emsp;&emsp;当工作队列被填满后，没有预定义的饱和策略来阻塞execute。然而通过Semaphore(信号量)来限制任务的到达率，就可以实现这个功能。下面的程序清单给出了这个方法。该方法使用了一个无界队列(因此不能限制队列的大小和任务的到达率)，并设置信号量上的上界设置为线程池的大小加上可排队任务的数量，这是因为信号量需要控制正在执行的和等待执行的任务数量。
+ ```java
+ package info.tonyle.concurrent.chapter08;
+
+import java.util.concurrent.Executor;
+import java.util.concurrent.RejectedExecutionException;
+import java.util.concurrent.Semaphore;
+
+public class BoundedExecutor {
+    private final Executor executor;
+
+    private final Semaphore semaphore;
+
+    public BoundedExecutor(Executor executor, int bound){
+        this.executor = executor;
+        this.semaphore = new Semaphore(bound);
+    }
+
+    public void submitTask(final Runnable runnable) throws InterruptedException {
+        semaphore.acquire();
+        try{
+            executor.execute(() -> {
+                try{
+                    runnable.run();
+                }finally {
+                    semaphore.release();
+                }
+            });
+        }catch (RejectedExecutionException e){
+            semaphore.release();
+        }
+    }
+}
+ ```
+### 8.3.4 线程工厂
+&emsp;&emsp;每当一个线程池需要创建一个线程时，都是通过线程工厂方法来完成的。默认的线程工厂方法将创建一个新的、非守护的线程,并且不包含特殊的配置信息。通过指定一个线程工厂方法，可以定制线程池的配置信息。在ThreadFactory中只定义了一个方法newThread，每当线程池需要创建一个新线程时都会调用这个方法。
+&emsp;&emsp;然而，在许多情况下都需要使用定制的线程工厂方法。例如，你希望为线程池中的线程指定一个UncaughtExceptionHandler，或者实例化一个定制的Thread类用于执行调试信息的记录。你还可以希望修改线程的优先级(这不是个好主意)或者守护状态。或许你只是希望给线程取一个更有意义的名称，来解释线程的转储信息和错误日志。
+&emsp;&emsp;如下程序清单，给出了一个制定一个线程工厂。它创建了一个新的MyAppThread实例，并将一个特定与线程池的名字传递给MyAppThread的构造函数，从而可以在线程转储和错误日志信息中区分来自不通线程池的线程。
+ ```java
+
+public class MyThreadFactory implements ThreadFactory {
+
+    private final String poolName;
+
+    public MyThreadFactory(String poolName){
+        this.poolName = poolName;
+    }
+
+    @Override
+    public Thread newThread(Runnable r) {
+        return new MyThread(r, poolName);
+    }
+}
+ ```
+ ```java
+public class MyThread extends Thread {
+    private final static String DEFAULT_NAME = "MyThreadName";
+    private static volatile boolean debugLifecycle = false;
+    private static final AtomicInteger alive = new AtomicInteger();
+    private static final AtomicInteger created = new AtomicInteger();
+    private static Logger logger = Logger.getAnonymousLogger();
+
+    public MyThread(Runnable runnable){
+        this(runnable,DEFAULT_NAME);
+    }
+
+    public MyThread(Runnable runnable, String poolName){
+        super(runnable, poolName + "-" + created.incrementAndGet());
+        setUncaughtExceptionHandler(
+                new Thread.UncaughtExceptionHandler(){
+                    @Override
+                    public void uncaughtException(Thread t, Throwable e) {
+                        logger.log(Level.SEVERE,"Uncaught in thread " + t.getName(), e);
+                    }
+                }
+        );
+    }
+
+    @Override
+    public void run(){
+        //复制debug标志以确保唯一性
+        boolean debug = debugLifecycle;
+        if(debug) logger.log(Level.FINE,"Created" + getName());
+        try{
+            alive.incrementAndGet();
+            super.run();
+        }finally {
+            alive.decrementAndGet();
+            if(debug) logger.log(Level.FINE,"Exiting" + getName());
+        }
+    }
+}
+ ```
+&emsp;&emsp;如果在应用程序中需要利用安全策略来控制对某些特殊代码库的访问权限，那么可以通过Executor中的privilegedThreadFactory工厂来定制自己的线程工厂。通过这种方式创建出来的线程，将与创建privilegedThreadFactory的线程拥有相同的访问权限、AccessControlContext和contextClassLoader。如果不使用privilegedThreadFactory，线程池创建的线程将从在需要新线程时调用execute或submit的客户程序中继承访问权限，从而导致令人困惑的安全性异常。
+
+### 8.3.5 在调用构造函数后在指定ThreadPoolExecutor
+&emsp;&emsp;在调用完ThreadPoolExecutor的构造函数后，仍然可以通过设置函数(Setter)来修改大多数传递给它的构造函数的参数(例如线程池的基本大小、最大大小、存活时间、线程工厂以及拒绝执行处理器(Rejected Execution Handler))。如果Executor是通过Executors中的某个(newSingleThreadExecutor除外)工厂方法创建，那么可以将结构的类型转换为ThreadPoolExecutor以访问设置器。如下代码清单：
+ ```java
+ ExecutorService exec = Executors.newCachedThreadPool();
+ if(exec instanceof ThreadPoolExecutor)
+    ((ThreadPoolExecutor) exec).setCorePoolSize(10);
+ else
+    throw new AssertionError("Oops, bad assumption");
+ ```
+&emsp;&emsp;在Executors中包含一个unconfigurableExecutorService工厂方法，该方法对一个现有的ExecutorService进行封装，使其只暴露出ExecutorService的方法，因此不能对它进行配置。newSingleThreadExecutor返回按这种方式封装的ExecutorService，而不是最初的ThreadPoolExecutor。虽然但线程Executor实际上被实现为一个只能包含唯一线程的线程池，但它同样能够确保不会并发地执行任务。如果在代码中增单线程Executor的线程池大小，那么将破坏它的执行予以。
+&emsp;&emsp;你可以在自己的Executor中使用这项技术以防止执行策略被修改。如果将ExecutorService暴露给不信任的代码，又不希望对其进行修改，就可以通过unconfigurableExecutorService来包装它。
+
+## 8.4 扩展ThreadPoolExecutor
+&emsp;&emsp;ThreadPoolExecutor是可扩展的，它提供了几个可以在之类话中改写的方法:beforeExecute、afterExecute和terminated，这些方法可以用于扩展ThreadPoolExecutor的行为。
+&emsp;&emsp;在执行任务的线程中将调用beforeExecute和afterExecute等方法，在这些方法中还可以添加日志、计时、监视或统计信息收集的功能。无论任务是从run中正常返回，还是跑出一个异常而返回，afterExecute都会被调用。(如果任务在完成后带有一个Error，那么就不会调用afterExecute。)如果beforeExecute跑出一个RuntimeException，那么任务将不被执行，并且afterExecute也不会被调用。
+&emsp;&emsp;在线程池完成关闭操作时调用terminated，也就是在所有任务都已经完成并且所有工作者线程已经关闭后。terminated可以用来释放Executor在其生命周期里分配的各种资源，此外还可以执行发送通知、记录日志或者收集finalize统计信息等操作。
+
+**示例：给线程池添加统计信息**
+&emsp;&emsp;TimingThreadPool中给出一个自定义的线程池，它通过beforeExecute、afterExecute和terminated等方法来添加日志记录和统计信息收集。为了测量任务的运行时间，beforeExecute必须记录开始时间并把它保存到一个afterExecute可以访问的地方。因为这些方法将在执行任务的线程中调用，因此beforeExecute可以把值保存到ThreadLocal变量中，然后由afterExecute来读取。在TimingThreadPool中使用了两个AtomicLong变量，分别用于记录已处理的任务数和总的处理时间，并通过terminated来输出包含平滚任务时间的日志消息。
+ ```java
+ public class TimingThreadPool extends ThreadPoolExecutor {
+
+    private final ThreadLocal<Long> startTime = new ThreadLocal<>();
+    private final Logger log = Logger.getLogger("TimingThreadPool");
+    private final AtomicLong numTasks = new AtomicLong();
+    private final AtomicLong totalTime = new AtomicLong();
+    /**
+     *  构造方法省略
+     **/
+    @Override
+    protected void beforeExecute(Thread t, Runnable r){
+        super.beforeExecute(t,r);
+        log.fine(String.format("Thread %s : start %s", t, r));
+        startTime.set(System.nanoTime());
+    }
+
+    @Override
+    protected void afterExecute(Runnable r, Throwable t) {
+        try{
+            long endTime = System.nanoTime();
+            long taskTime = endTime - startTime.get();
+            numTasks.incrementAndGet();
+            totalTime.addAndGet(taskTime);
+            log.fine(String.format("Thread %s : end %s, time=%dns",Thread.currentThread(),r,taskTime));
+        }finally {
+            super.afterExecute(r, t);
+        }
+    }
+
+    @Override
+    protected void terminated() {
+        try{
+            log.info(String.format("Terminated:avg time=%dns",totalTime.get() / numTasks.get()));
+        }finally {
+            super.terminated();
+        }
+    }
+}
+ ```
+
