--- a/Java Framework/Spring Source Code/Container/2、默认标签解析.md
+++ b/Java Framework/Spring Source Code/Container/2、默认标签解析.md
@@ -1399,4 +1399,4 @@
 1. 对 beanName 已经注册的情况的处理。
 1. 对于 beanName 不存在的情况，分别在 启动注册阶段 和 已经创建 的阶段处理
 1. 加入 map 缓存
-1. 清楚解析之前留下的对应 beanName 缓存。
+1. 清除解析之前留下的对应 beanName 缓存。
